commit translated contents

--- a/articles/active-directory-domain-services/TOC.yml
+++ b/articles/active-directory-domain-services/TOC.yml
@@ -1,154 +1,147 @@
-items:
 - name: Dokumentation om Azure AD Domain Services
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Azure AD Domain Services?
-    href: active-directory-ds-overview.md
-  - name: Vanliga frågor och svar
-    href: active-directory-ds-faqs.md
-  - name: Är det rätt alternativ för dig?
-    items:
-    - name: Jämför med Windows Server AD
-      href: active-directory-ds-comparison.md
-    - name: Jämför med Azure AD-anslutning
-      href: active-directory-ds-compare-with-azure-ad-join.md
-  - name: Nyheter
-    href: https://azure.microsoft.com/updates/?product=active-directory-ds
-  - name: Funktioner
-    href: active-directory-ds-features.md
-  - name: Scenarier
-    href: active-directory-ds-scenarios.md
-  - name: Så här fungerar synkronisering
-    href: active-directory-ds-synchronization.md
-  - name: Kompatibelt tredjepartsprogram
-    href: active-directory-ds-compatible-software.md
+    - name: Vad är Azure AD Domain Services?
+      href: active-directory-ds-overview.md
+    - name: Vanliga frågor och svar
+      href: active-directory-ds-faqs.md
+    - name: Är det rätt alternativ för dig?
+      items:
+        - name: Jämför med Windows Server AD
+          href: active-directory-ds-comparison.md
+        - name: Jämför med Azure AD-anslutning
+          href: active-directory-ds-compare-with-azure-ad-join.md
+    - name: Nyheter
+      href: 'https://azure.microsoft.com/updates/?product=active-directory-ds'
+    - name: Funktioner
+      href: active-directory-ds-features.md
+    - name: Scenarier
+      href: active-directory-ds-scenarios.md
+    - name: Så här fungerar synkronisering
+      href: active-directory-ds-synchronization.md
+    - name: Kompatibelt tredjepartsprogram
+      href: active-directory-ds-compatible-software.md
 - name: Kom igång
   items:
-  - name: 'Uppgift 1: Konfigurera grundläggande inställningar'
-    href: active-directory-ds-getting-started.md
-  - name: 'Uppgift 2: Konfigurera nätverksinställningar'
-    href: active-directory-ds-getting-started-network.md
-  - name: 'Uppgift 3: Konfigurera administratörsgrupp och aktivera Azure AD Domain Services'
-    href: active-directory-ds-getting-started-admingroup.md
-  - name: 'Uppgift 4: Uppdatera DNS-inställningar för virtuellt nätverk'
-    href: active-directory-ds-getting-started-dns.md
-  - name: 'Uppgift 5: aktivera hashsynkronisering för lösenord'
-    href: active-directory-ds-getting-started-password-sync.md
+    - name: 'Uppgift 1: Konfigurera grundläggande inställningar'
+      href: active-directory-ds-getting-started.md
+    - name: 'Uppgift 2: Konfigurera nätverksinställningar'
+      href: active-directory-ds-getting-started-network.md
+    - name: 'Uppgift 3: Konfigurera administratörsgrupp och aktivera Azure AD Domain Services'
+      href: active-directory-ds-getting-started-admingroup.md
+    - name: 'Uppgift 4: Uppdatera DNS-inställningar för virtuellt nätverk'
+      href: active-directory-ds-getting-started-dns.md
+    - name: 'Uppgift 5: aktivera hashsynkronisering för lösenord'
+      href: active-directory-ds-getting-started-password-sync.md
 - name: Gör så här för att
   items:
-  - name: Kontrollera en hanterad domäns hälsostatus
-    href: active-directory-ds-check-health.md
-  - name: Använda Azure AD Domain Services i Azure CSP-prenumerationer
-    href: active-directory-ds-csp.md
-  - name: Aktivera Azure AD Domain Services med PowerShell
-    href: active-directory-ds-enable-using-powershell.md
-  - name: Konfigurera begränsad synkronisering från Azure AD till en hanterad domän
-    href: active-directory-ds-scoped-synchronization.md
-  - name: Skydda din hanterade domän
-    href: active-directory-ds-secure-your-domain.md
-  - name: Skapa en OU på en hanterad domän
-    href: active-directory-ds-admin-guide-create-ou.md
-  - name: Skapa ett grupphanterat tjänstkonto på en hanterad domän
-    href: active-directory-ds-create-gmsa.md
-  - name: Administrera grupprincip i en hanterad domän
-    href: active-directory-ds-admin-guide-administer-group-policy.md
-  - name: Konfigurera lösenordsprinciper på en hanterad domän
-    href: active-directory-ds-password-policy.md
-  - name: Välja ett virtuellt nätverk
-    href: active-directory-ds-networking.md
-  - name: Distribuera program
-    items:
-    - name: Konfigurera support för profilsynkronisering för SharePoint Server
-      href: active-directory-ds-enable-sharepoint-profile-sync.md
-    - name: Konfigurera begränsad Kerberos-delegering
-      href: active-directory-ds-enable-kcd.md
-    - name: Distribuera Azure AD-programproxy
-      href: active-directory-ds-deploy-azure-app-proxy.md
-  - name: Ta bort en hanterad domän
-    href: active-directory-ds-disable-aadds.md
+    - name: Kontrollera en hanterad domäns hälsostatus
+      href: active-directory-ds-check-health.md
+    - name: Använda Azure AD Domain Services i Azure CSP-prenumerationer
+      href: active-directory-ds-csp.md
+    - name: Aktivera Azure AD Domain Services med PowerShell
+      href: active-directory-ds-enable-using-powershell.md
+    - name: Konfigurera begränsad synkronisering från Azure AD till en hanterad domän
+      href: active-directory-ds-scoped-synchronization.md
+    - name: Skydda din hanterade domän
+      href: active-directory-ds-secure-your-domain.md
+    - name: Skapa en OU på en hanterad domän
+      href: active-directory-ds-admin-guide-create-ou.md
+    - name: Skapa ett grupphanterat tjänstkonto på en hanterad domän
+      href: active-directory-ds-create-gmsa.md
+    - name: Administrera grupprincip i en hanterad domän
+      href: active-directory-ds-admin-guide-administer-group-policy.md
+    - name: Konfigurera lösenordsprinciper på en hanterad domän
+      href: active-directory-ds-password-policy.md
+    - name: Välja ett virtuellt nätverk
+      href: active-directory-ds-networking.md
+    - name: Distribuera program
+      items:
+        - name: Konfigurera support för profilsynkronisering för SharePoint Server
+          href: active-directory-ds-enable-sharepoint-profile-sync.md
+        - name: Konfigurera begränsad Kerberos-delegering
+          href: active-directory-ds-enable-kcd.md
+        - name: Distribuera Azure AD-programproxy
+          href: active-directory-ds-deploy-azure-app-proxy.md
+    - name: Ta bort en hanterad domän
+      href: active-directory-ds-disable-aadds.md
 - name: Anslut till en hanterad domän
   items:
-  - name: Virtuell Windows Server-dator
-    href: active-directory-ds-admin-guide-join-windows-vm-portal.md
-  - name: Virtuell Windows Server-dator från mall
-    href: active-directory-ds-join-windows-vm-template.md
-  - name: CentOS
-    href: active-directory-ds-join-centos-linux-vm.md
-  - name: CoreOS
-    href: active-directory-ds-join-coreos-linux-vm.md
-  - name: Red Hat Enterprise Linux
-    href: active-directory-ds-join-rhel-linux-vm.md
-  - name: Ubuntu Server
-    href: active-directory-ds-join-ubuntu-linux-vm.md
+    - name: Virtuell Windows Server-dator
+      href: active-directory-ds-admin-guide-join-windows-vm-portal.md
+    - name: Virtuell Windows Server-dator från mall
+      href: active-directory-ds-join-windows-vm-template.md
+    - name: CentOS
+      href: active-directory-ds-join-centos-linux-vm.md
+    - name: CoreOS
+      href: active-directory-ds-join-coreos-linux-vm.md
+    - name: Red Hat Enterprise Linux
+      href: active-directory-ds-join-rhel-linux-vm.md
+    - name: Ubuntu Server
+      href: active-directory-ds-join-ubuntu-linux-vm.md
 - name: Administrera en hanterad domän
   items:
-  - name: Administrera en hanterad domän
-    href: active-directory-ds-admin-guide-administer-domain.md
-  - name: Administrera DNS på en hanterad domän
-    href: active-directory-ds-admin-guide-administer-dns.md
-  - name: Uppdatera e-postaviseringar
-    href: active-directory-ds-notifications.md
+    - name: Administrera en hanterad domän
+      href: active-directory-ds-admin-guide-administer-domain.md
+    - name: Administrera DNS på en hanterad domän
+      href: active-directory-ds-admin-guide-administer-dns.md
+    - name: Uppdatera e-postaviseringar
+      href: active-directory-ds-notifications.md
 - name: Konfigurera säker LDAP för en hanterad domän
   items:
-  - name: 'Uppgift 1: Hämta ett certifikat för säkert LDAP'
-    href: active-directory-ds-admin-guide-configure-secure-ldap.md
-  - name: 'Uppgift 2: Exportera certifikatet för säkert LDAP'
-    href: active-directory-ds-admin-guide-configure-secure-ldap-export-pfx.md
-  - name: 'Uppgift 3: Aktivera säkert LDAP för den hanterade domänen med Azure-portalen'
-    href: active-directory-ds-admin-guide-configure-secure-ldap-enable-ldaps.md
-  - name: 'Uppgift 4: Konfigurera DNS att komma åt den hanterade domänen från Internet'
-    href: active-directory-ds-ldaps-configure-dns.md
-  - name: 'Uppgift 5: Bind till den hanterade domänen och lås åtkomst med säkert LDAP'
-    href: active-directory-ds-ldaps-bind-lockdown.md
-  - name: Felsöka säkert LDAP
-    href: active-directory-ds-ldaps-troubleshoot.md
+    - name: 'Uppgift 1: Hämta ett certifikat för säkert LDAP'
+      href: active-directory-ds-admin-guide-configure-secure-ldap.md
+    - name: 'Uppgift 2: Exportera certifikatet för säkert LDAP'
+      href: active-directory-ds-admin-guide-configure-secure-ldap-export-pfx.md
+    - name: 'Uppgift 3: Aktivera säkert LDAP för den hanterade domänen med Azure-portalen'
+      href: active-directory-ds-admin-guide-configure-secure-ldap-enable-ldaps.md
+    - name: 'Uppgift 4: Konfigurera DNS att komma åt den hanterade domänen från Internet'
+      href: active-directory-ds-ldaps-configure-dns.md
+    - name: 'Uppgift 5: Bind till den hanterade domänen och lås åtkomst med säkert LDAP'
+      href: active-directory-ds-ldaps-bind-lockdown.md
+    - name: Felsöka säkert LDAP
+      href: active-directory-ds-ldaps-troubleshoot.md
 - name: Felsöka
   items:
-  - name: Felsökningsguide
-    href: active-directory-ds-troubleshooting.md
-  - name: Felsöka aviseringar
-    href: active-directory-ds-troubleshoot-alerts.md
-    items:
-    - name: Åtgärda en bruten NSG-konfiguration
-      href: active-directory-ds-troubleshoot-nsg.md
-    - name: Återställa tjänstens huvudnamn som saknas
-      href: active-directory-ds-troubleshoot-service-principals.md
-    - name: Säkert LDAP – fel
-      href: active-directory-ds-troubleshoot-ldaps.md
-  - name: Lös felmatchade klientfel
-    href: active-directory-ds-mismatched-tenant-error.md
-  - name: Inaktiverade domäner
-    href: active-directory-ds-suspension.md
+    - name: Felsökningsguide
+      href: active-directory-ds-troubleshooting.md
+    - name: Felsöka aviseringar
+      href: active-directory-ds-troubleshoot-alerts.md
+      items:
+        - name: Åtgärda en bruten NSG-konfiguration
+          href: active-directory-ds-troubleshoot-nsg.md
+        - name: Återställa tjänstens huvudnamn som saknas
+          href: active-directory-ds-troubleshoot-service-principals.md
+        - name: Säkert LDAP – fel
+          href: active-directory-ds-troubleshoot-ldaps.md
+    - name: Lös felmatchade klientfel
+      href: active-directory-ds-mismatched-tenant-error.md
+    - name: Inaktiverade domäner
+      href: active-directory-ds-suspension.md
 - name: Referens
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=active-directory
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=active-directory'
 - name: Relaterat
   items:
-  - name: Azure Active Directory
-    href: ../active-directory/fundamentals/active-directory-whatis.md
-  - name: Azure Active Directory B2C
-    href: ../active-directory-b2c/active-directory-b2c-overview.md
-  - name: Multi-Factor Authentication
-    href: ../active-directory/authentication/multi-factor-authentication.md
+    - name: Azure Active Directory
+      href: ../active-directory/fundamentals/active-directory-whatis.md
+    - name: Azure Active Directory B2C
+      href: ../active-directory-b2c/active-directory-b2c-overview.md
+    - name: Multi-Factor Authentication
+      href: ../active-directory/authentication/multi-factor-authentication.md
 - name: Resurser
   items:
-  - name: Azure AD-feedbackforum
-    href: https://feedback.azure.com/forums/169401-azure-active-directory
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=security-identity
-  - name: Kontakta oss
-    href: active-directory-ds-contact-us.md
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/active-directory-ds/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=active-directory-ds
-ms.openlocfilehash: 8559569df09bf611286730868f50d0bf1878182b
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58341126"
+    - name: Azure AD-feedbackforum
+      href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
+    - name: Kontakta oss
+      href: active-directory-ds-contact-us.md
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/active-directory-ds/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=active-directory-ds'
