--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -1,239 +1,232 @@
-items:
 - name: Dokumentation om autentisering
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är autentisering?
-    href: overview-authentication.md
+    - name: Vad är autentisering?
+      href: overview-authentication.md
 - name: Snabbstart
   items:
-  - name: Konfigurera återställning av lösenord
-    href: quickstart-sspr.md
+    - name: Konfigurera återställning av lösenord
+      href: quickstart-sspr.md
 - name: Självstudier
   items:
-  - name: 1 Aktivera MFA för program
-    href: tutorial-mfa-applications.md
-  - name: 2 Aktivera SSPR-pilot
-    href: tutorial-sspr-pilot.md
-  - name: Aktivera lokal SSPR-integration
-    href: tutorial-enable-writeback.md
-  - name: Aktivera lösenordsåterställning för Windows 10
-    href: tutorial-sspr-windows.md
-  - name: Integrera Azure Identity Protection
-    href: tutorial-risk-based-sspr-mfa.md
+    - name: 1 Aktivera MFA för program
+      href: tutorial-mfa-applications.md
+    - name: 2 Aktivera SSPR-pilot
+      href: tutorial-sspr-pilot.md
+    - name: Aktivera lokal SSPR-integration
+      href: tutorial-enable-writeback.md
+    - name: Aktivera lösenordsåterställning för Windows 10
+      href: tutorial-sspr-windows.md
+    - name: Integrera Azure Identity Protection
+      href: tutorial-risk-based-sspr-mfa.md
 - name: Begrepp
-  items:
-  - name: Autentiseringsmetoder
-    href: concept-authentication-methods.md
-  - name: Kombinerad registrering
-    href: concept-registration-mfa-sspr-combined.md
-  - name: Lösenordsåterställning
-    items:
-    - name: Så här fungerar lösenordsåterställning
-      href: concept-sspr-howitworks.md
-    - name: Alternativ för lösenordsåterställning
-      href: concept-sspr-customization.md
-    - name: Principer för lösenordsåterställning
-      href: concept-sspr-policy.md
-    - name: Vilken licens behöver jag?
-      href: concept-sspr-licensing.md
-    - name: Lokal integration
-      href: concept-sspr-writeback.md
-  - name: Multi-Factor Authentication
-    items:
-    - name: Så här fungerar MFA
-      href: concept-mfa-howitworks.md
-    - name: Vilken version är rätt?
-      href: concept-mfa-whichversion.md
-    - name: Licensiera dina användare
-      href: concept-mfa-licensing.md
-    - name: Hantera en autentiseringsleverantör
-      href: concept-mfa-authprovider.md
-    - name: Säkerhetsvägledning
-      href: multi-factor-authentication-security-best-practices.md
-    - name: MFA för Office 365
-      href: https://docs.microsoft.com/office365/admin/security-and-compliance/set-up-multi-factor-authentication?view=o365-worldwide
-    - name: VANLIGA FRÅGOR OCH SVAR OM MFA
-      href: multi-factor-authentication-faq.md
-  - name: Azure AD-lösenordsskydd
-    items:
-    - name: Eliminera svaga lösenord i molnet
-      href: concept-password-ban-bad.md
-    - name: Eliminera svaga lösenord lokalt
-      href: concept-password-ban-bad-on-premises.md
-  - name: Motståndskraftiga åtkomstkontroller
-    href: concept-resilient-controls.md
   expanded: true
+  items:
+    - name: Autentiseringsmetoder
+      href: concept-authentication-methods.md
+    - name: Kombinerad registrering
+      href: concept-registration-mfa-sspr-combined.md
+    - name: Lösenordsåterställning
+      items:
+        - name: Så här fungerar lösenordsåterställning
+          href: concept-sspr-howitworks.md
+        - name: Alternativ för lösenordsåterställning
+          href: concept-sspr-customization.md
+        - name: Principer för lösenordsåterställning
+          href: concept-sspr-policy.md
+        - name: Vilken licens behöver jag?
+          href: concept-sspr-licensing.md
+        - name: Lokal integration
+          href: concept-sspr-writeback.md
+    - name: Multi-Factor Authentication
+      items:
+        - name: Så här fungerar MFA
+          href: concept-mfa-howitworks.md
+        - name: Vilken version är rätt?
+          href: concept-mfa-whichversion.md
+        - name: Licensiera dina användare
+          href: concept-mfa-licensing.md
+        - name: Hantera en autentiseringsleverantör
+          href: concept-mfa-authprovider.md
+        - name: Säkerhetsvägledning
+          href: multi-factor-authentication-security-best-practices.md
+        - name: MFA för Office 365
+          href: 'https://docs.microsoft.com/office365/admin/security-and-compliance/set-up-multi-factor-authentication?view=o365-worldwide'
+        - name: VANLIGA FRÅGOR OCH SVAR OM MFA
+          href: multi-factor-authentication-faq.md
+    - name: Azure AD-lösenordsskydd
+      items:
+        - name: Eliminera svaga lösenord i molnet
+          href: concept-password-ban-bad.md
+        - name: Eliminera svaga lösenord lokalt
+          href: concept-password-ban-bad-on-premises.md
+    - name: Motståndskraftiga åtkomstkontroller
+      href: concept-resilient-controls.md
 - name: Instruktionsguider
   items:
-  - name: Återställning av lösenord för självbetjäning
-    items:
-    - name: Distribuera återställning av lösenord via självbetjäning
-      href: howto-sspr-deployment.md
-    - name: Förhandsregistrera autentiseringsdata
-      href: howto-sspr-authenticationdata.md
-    - name: Aktivera tillbakaskrivning av lösenord
-      href: howto-sspr-writeback.md
-    - name: SSPR för Windows 7, 8 och Windows 8.1
-      href: howto-sspr-windows-7-8.md
-  - name: Molnbaserad MFA
-    items:
-    - name: Distribuera molnbaserad MFA
-      href: howto-mfa-getstarted.md
-    - name: MFA per användare
-      href: howto-mfa-userstates.md
-    - name: Användar- och enhetsinställningar
-      href: howto-mfa-userdevicesettings.md
-    - name: Konfigurera inställningar
-      href: howto-mfa-mfasettings.md
-    - name: Directory Federation
+    - name: Återställning av lösenord för självbetjäning
       items:
-      - name: Windows Server 2016 AD FS-adapter
-        href: https://docs.microsoft.com/windows-server/identity/ad-fs/operations/configure-ad-fs-and-azure-mfa
-      - name: Federation Services
-        href: multi-factor-authentication-get-started-adfs.md
-      - name: Använda AD FS
-        href: howto-mfa-adfs.md
-    - name: RADIUS-integrering
+        - name: Distribuera återställning av lösenord via självbetjäning
+          href: howto-sspr-deployment.md
+        - name: Förhandsregistrera autentiseringsdata
+          href: howto-sspr-authenticationdata.md
+        - name: Aktivera tillbakaskrivning av lösenord
+          href: howto-sspr-writeback.md
+        - name: 'SSPR för Windows 7, 8 och Windows 8.1'
+          href: howto-sspr-windows-7-8.md
+    - name: Molnbaserad MFA
       items:
-      - name: Använda befintliga servrar för nätverksprinciper
-        href: howto-mfa-nps-extension.md
-      - name: Avancerad konfiguration för NPS-tillägg
-        href: howto-mfa-nps-extension-advanced.md
-      - name: Azure VPN och Azure MFA
-        href: ../../vpn-gateway/vpn-gateway-radiuis-mfa-nsp.md
-      - name: Gateway för fjärrskrivbord
-        href: howto-mfa-nps-extension-rdg.md
-      - name: VPN
-        href: howto-mfa-nps-extension-vpn.md
-  - name: Kombinerad registrering
-    items:
-    - name: Aktivera kombinerad registrering
-      href: howto-registration-mfa-sspr-combined.md
-    - name: Felsöka kombinerad registrering
-      href: howto-registration-mfa-sspr-combined-troubleshoot.md
-  - name: Azure AD-lösenordsskydd
-    items:
-    - name: Konfigurera listan med förbjudna lösenord
-      href: howto-password-ban-bad-configure.md
-    - name: Lokal integration
+        - name: Distribuera molnbaserad MFA
+          href: howto-mfa-getstarted.md
+        - name: MFA per användare
+          href: howto-mfa-userstates.md
+        - name: Användar- och enhetsinställningar
+          href: howto-mfa-userdevicesettings.md
+        - name: Konfigurera inställningar
+          href: howto-mfa-mfasettings.md
+        - name: Directory Federation
+          items:
+            - name: Windows Server 2016 AD FS-adapter
+              href: 'https://docs.microsoft.com/windows-server/identity/ad-fs/operations/configure-ad-fs-and-azure-mfa'
+            - name: Federation Services
+              href: multi-factor-authentication-get-started-adfs.md
+            - name: Använda AD FS
+              href: howto-mfa-adfs.md
+        - name: RADIUS-integrering
+          items:
+            - name: Använda befintliga servrar för nätverksprinciper
+              href: howto-mfa-nps-extension.md
+            - name: Avancerad konfiguration för NPS-tillägg
+              href: howto-mfa-nps-extension-advanced.md
+            - name: Azure VPN och Azure MFA
+              href: ../../vpn-gateway/vpn-gateway-radiuis-mfa-nsp.md
+            - name: Gateway för fjärrskrivbord
+              href: howto-mfa-nps-extension-rdg.md
+            - name: VPN
+              href: howto-mfa-nps-extension-vpn.md
+    - name: Kombinerad registrering
       items:
-      - name: Distribuera Azure AD-lösenordsskydd
-        href: howto-password-ban-bad-on-premises-deploy.md
-      - name: Konfigurera Azure AD-lösenordsskydd
-        href: howto-password-ban-bad-on-premises-operations.md
-      - name: Övervaka Azure AD-lösenordsskydd
-        href: howto-password-ban-bad-on-premises-monitor.md
-      - name: Felsöka Azure AD-lösenordsskydd
-        href: howto-password-ban-bad-on-premises-troubleshoot.md
-      - name: Vanliga frågor och svar
-        href: howto-password-ban-bad-on-premises-faq.md
-      - name: Versionshistorik för lokal agent
-        href: howto-password-ban-bad-on-premises-agent-versions.md
-  - name: Smart utlåsning i Azure AD
-    href: howto-password-smart-lockout.md
-  - name: Windows Hello för företag
-    href: https://docs.microsoft.com/windows/security/identity-protection/hello-for-business/hello-identity-verification
-  - name: Lösenordslös inloggning via telefon
-    href: howto-authentication-phone-sign-in.md
-  - name: Certifikatbaserad autentisering
-    items:
-    - name: Komma igång med certifikatbaserad autentisering
-      href: active-directory-certificate-based-authentication-get-started.md
+        - name: Aktivera kombinerad registrering
+          href: howto-registration-mfa-sspr-combined.md
+        - name: Felsöka kombinerad registrering
+          href: howto-registration-mfa-sspr-combined-troubleshoot.md
+    - name: Azure AD-lösenordsskydd
       items:
-      - name: CBA på Android-enheter
-        href: active-directory-certificate-based-authentication-android.md
-      - name: CBA på iOS-enheter
-        href: active-directory-certificate-based-authentication-ios.md
-  - name: Utveckla
-    items:
-    - name: Bygga in MFA i anpassade appar
-      href: howto-mfa-sdk.md
-  - name: Rapportering
-    items:
-    - name: SSPR-rapporter
-      href: howto-sspr-reporting.md
-    - name: MFA-rapporter
-      href: howto-mfa-reporting.md
-    - name: Datainsamling
-      href: howto-mfa-reporting-datacollection.md
-  - name: MFA-server
-    items:
-    - name: Distribuera MFA lokalt
-      href: howto-mfaserver-deploy.md
-    - name: Installera användarportalen
-      href: howto-mfaserver-deploy-userportal.md
-    - name: Webbtjänsten Mobile App
-      href: howto-mfaserver-deploy-mobileapp.md
-    - name: Konfigurera hög tillgänglighet
-      href: howto-mfaserver-deploy-ha.md
-    - name: Uppgradera MFA Server
-      href: howto-mfaserver-deploy-upgrade.md
-    - name: Uppgradera från PhoneFactor
-      href: howto-mfaserver-deploy-upgrade-pf.md
-    - name: Windows-autentisering
-      href: howto-mfaserver-windows.md
-    - name: IIS-webbappar
-      href: howto-mfaserver-iis.md
-    - name: Katalogintegrering
+        - name: Konfigurera listan med förbjudna lösenord
+          href: howto-password-ban-bad-configure.md
+        - name: Lokal integration
+          items:
+            - name: Distribuera Azure AD-lösenordsskydd
+              href: howto-password-ban-bad-on-premises-deploy.md
+            - name: Konfigurera Azure AD-lösenordsskydd
+              href: howto-password-ban-bad-on-premises-operations.md
+            - name: Övervaka Azure AD-lösenordsskydd
+              href: howto-password-ban-bad-on-premises-monitor.md
+            - name: Felsöka Azure AD-lösenordsskydd
+              href: howto-password-ban-bad-on-premises-troubleshoot.md
+            - name: Vanliga frågor och svar
+              href: howto-password-ban-bad-on-premises-faq.md
+            - name: Versionshistorik för lokal agent
+              href: howto-password-ban-bad-on-premises-agent-versions.md
+    - name: Smart utlåsning i Azure AD
+      href: howto-password-smart-lockout.md
+    - name: Windows Hello för företag
+      href: 'https://docs.microsoft.com/windows/security/identity-protection/hello-for-business/hello-identity-verification'
+    - name: Lösenordslös inloggning via telefon
+      href: howto-authentication-phone-sign-in.md
+    - name: Certifikatbaserad autentisering
       items:
-      - name: LDAP-autentisering
-        href: howto-mfaserver-dir-ldap.md
-      - name: RADIUS-autentisering
-        href: howto-mfaserver-dir-radius.md
-      - name: Active Directory
-        href: howto-mfaserver-dir-ad.md
-    - name: Directory Federation
+        - name: Komma igång med certifikatbaserad autentisering
+          href: active-directory-certificate-based-authentication-get-started.md
+          items:
+            - name: CBA på Android-enheter
+              href: active-directory-certificate-based-authentication-android.md
+            - name: CBA på iOS-enheter
+              href: active-directory-certificate-based-authentication-ios.md
+    - name: Utveckla
       items:
-      - name: Använda AD FS 2.0
-        href: howto-mfaserver-adfs-2.md
-      - name: Använda Windows Server 2012 R2 AD FS
-        href: howto-mfaserver-adfs-2012.md
-    - name: RADIUS-integrering
+        - name: Bygga in MFA i anpassade appar
+          href: howto-mfa-sdk.md
+    - name: Rapportering
       items:
-      - name: Gateway för fjärrskrivbord
-        href: howto-mfaserver-nps-rdg.md
-      - name: Avancerade VPN-konfigurationer
-        href: howto-mfaserver-nps-vpn.md
-      - name: Fel i NPS-tillägg
-        href: howto-mfa-nps-extension-errors.md
-  - name: Felsöka
-    items:
-    - name: Felsöka SSPR
-      href: active-directory-passwords-troubleshoot.md
-    - name: VANLIGA FRÅGOR OCH SVAR OM SSPR
-      href: active-directory-passwords-faq.md
-    - name: VANLIGA FRÅGOR OCH SVAR OM MFA
-      href: multi-factor-authentication-faq.md
-    - name: NPS-tillägg
-      href: howto-mfa-nps-extension-errors.md
+        - name: SSPR-rapporter
+          href: howto-sspr-reporting.md
+        - name: MFA-rapporter
+          href: howto-mfa-reporting.md
+        - name: Datainsamling
+          href: howto-mfa-reporting-datacollection.md
+    - name: MFA-server
+      items:
+        - name: Distribuera MFA lokalt
+          href: howto-mfaserver-deploy.md
+        - name: Installera användarportalen
+          href: howto-mfaserver-deploy-userportal.md
+        - name: Webbtjänsten Mobile App
+          href: howto-mfaserver-deploy-mobileapp.md
+        - name: Konfigurera hög tillgänglighet
+          href: howto-mfaserver-deploy-ha.md
+        - name: Uppgradera MFA Server
+          href: howto-mfaserver-deploy-upgrade.md
+        - name: Uppgradera från PhoneFactor
+          href: howto-mfaserver-deploy-upgrade-pf.md
+        - name: Windows-autentisering
+          href: howto-mfaserver-windows.md
+        - name: IIS-webbappar
+          href: howto-mfaserver-iis.md
+        - name: Katalogintegrering
+          items:
+            - name: LDAP-autentisering
+              href: howto-mfaserver-dir-ldap.md
+            - name: RADIUS-autentisering
+              href: howto-mfaserver-dir-radius.md
+            - name: Active Directory
+              href: howto-mfaserver-dir-ad.md
+        - name: Directory Federation
+          items:
+            - name: Använda AD FS 2.0
+              href: howto-mfaserver-adfs-2.md
+            - name: Använda Windows Server 2012 R2 AD FS
+              href: howto-mfaserver-adfs-2012.md
+        - name: RADIUS-integrering
+          items:
+            - name: Gateway för fjärrskrivbord
+              href: howto-mfaserver-nps-rdg.md
+            - name: Avancerade VPN-konfigurationer
+              href: howto-mfaserver-nps-vpn.md
+            - name: Fel i NPS-tillägg
+              href: howto-mfa-nps-extension-errors.md
+    - name: Felsöka
+      items:
+        - name: Felsöka SSPR
+          href: active-directory-passwords-troubleshoot.md
+        - name: VANLIGA FRÅGOR OCH SVAR OM SSPR
+          href: active-directory-passwords-faq.md
+        - name: VANLIGA FRÅGOR OCH SVAR OM MFA
+          href: multi-factor-authentication-faq.md
+        - name: NPS-tillägg
+          href: howto-mfa-nps-extension-errors.md
 - name: Referens
   items:
-  - name: Användarhandbok för MFA
-    href: ./end-user/current/multi-factor-authentication-end-user.md
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=active-directory
-  - name: Azure PowerShell-cmdletar
-    href: /powershell/azure/overview
-  - name: Tjänstens begränsningar
-    href: ../users-groups-roles/directory-service-limits-restrictions.md
+    - name: Användarhandbok för MFA
+      href: ./end-user/current/multi-factor-authentication-end-user.md
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=active-directory'
+    - name: Azure PowerShell-cmdletar
+      href: /powershell/azure/overview
+    - name: Tjänstens begränsningar
+      href: ../users-groups-roles/directory-service-limits-restrictions.md
 - name: Resurser
   items:
-  - name: Azures feedbackforum
-    href: https://feedback.azure.com/forums/169401-azure-active-directory
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=WindowsAzureAD
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/active-directory/
-  - name: Tjänstuppdateringar
-    href: ../fundamentals/whats-new.md
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-active-directory
-  - name: Videoklipp
-    href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: c109feb0e75268027e0732efc8e922285c65e81e
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "58174298"
+    - name: Azures feedbackforum
+      href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=WindowsAzureAD'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/active-directory/'
+    - name: Tjänstuppdateringar
+      href: ../fundamentals/whats-new.md
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-active-directory'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=active-directory'
