--- a/articles/active-directory/authentication/index.yml
+++ b/articles/active-directory/authentication/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 31c211e6694eb0f02622b3a24d649fe6006df13e
-ms.sourcegitcommit: 58dc0d48ab4403eb64201ff231af3ddfa8412331
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/26/2019
-ms.locfileid: "55082035"
 documentType: LandingData
 title: Dokumentation om Azure AD-autentisering
 metadata:
-  document_id: 
+  document_id: null
   title: Dokumentation om Azure Active Directory-autentisering
-  description: Lär dig hur du hanterar och distribuerar Azure Active Directory-lösenordsåterställning via självbetjäning, Multi-Factor Authentication, listor över anpassade förbjudna lösenord och smart utlåsning.
+  description: 'Lär dig hur du hanterar och distribuerar Azure Active Directory-lösenordsåterställning via självbetjäning, Multi-Factor Authentication, listor över anpassade förbjudna lösenord och smart utlåsning.'
   services: active-directory
   ms.subservice: authentication
   author: MicrosoftGuyJFlo
@@ -22,28 +16,28 @@ metadata:
   ms.date: 07/19/2018
   ms.author: joflore
 abstract:
-  description: Lär dig hur du distribuerar och hanterar Azure Active Directory-lösenordsåterställning via självbetjäning, Multi-Factor Authentication, listor över anpassade förbjudna lösenord och smart utlåsning. Dessa funktioner tillsammans ger stark autentisering med en mängd verifieringsmetoder och en enkel inloggningsprocess för organisationen.
+  description: 'Lär dig hur du distribuerar och hanterar Azure Active Directory-lösenordsåterställning via självbetjäning, Multi-Factor Authentication, listor över anpassade förbjudna lösenord och smart utlåsning. Dessa funktioner tillsammans ger stark autentisering med en mängd verifieringsmetoder och en enkel inloggningsprocess för organisationen.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du aktiverar lösenordsåterställning via självbetjäning för att minska antalet samtal från användarna till supportavdelningen.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: ./media/index/i_protect.png
-      text: Aktivera lösenordsåterställning via självbetjäning
-      href: https://docs.microsoft.com/azure/active-directory/authentication/quickstart-sspr
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du aktiverar en enkel och säker inloggningsprocess för organisationen.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du aktiverar lösenordsåterställning via självbetjäning för att minska antalet samtal från användarna till supportavdelningen.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: ./media/index/i_protect.png
+            text: Aktivera lösenordsåterställning via självbetjäning
+            href: 'https://docs.microsoft.com/azure/active-directory/authentication/quickstart-sspr'
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/active-directory/authentication/tutorial-sspr-pilot">Aktivera pilot för lösenordsåterställning via självbetjäning</a>
-    - html: <a href="/azure/active-directory/authentication/tutorial-mfa-applications">Kräv MFA för Azure-portalen</a>
-    - html: <a href="/azure/active-directory/authentication/tutorial-enable-writeback">Aktivera lösenordsåterställning via självbetjäning för lokal integration</a>
-    - html: <a href="/azure/active-directory/authentication/tutorial-sspr-windows">Aktivera Windows 10-lösenordsåterställning</a>
-    - html: <a href="/azure/active-directory/authentication/tutorial-risk-based-sspr-mfa">Integrera med Azure Identity Protection</a>
+      - type: paragraph
+        text: Lär dig hur du aktiverar en enkel och säker inloggningsprocess för organisationen.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/authentication/tutorial-sspr-pilot">Aktivera pilot för lösenordsåterställning via självbetjäning</a>
+          - html: <a href="/azure/active-directory/authentication/tutorial-mfa-applications">Kräv MFA för Azure-portalen</a>
+          - html: <a href="/azure/active-directory/authentication/tutorial-enable-writeback">Aktivera lösenordsåterställning via självbetjäning för lokal integration</a>
+          - html: <a href="/azure/active-directory/authentication/tutorial-sspr-windows">Aktivera Windows 10-lösenordsåterställning</a>
+          - html: <a href="/azure/active-directory/authentication/tutorial-risk-based-sspr-mfa">Integrera med Azure Identity Protection</a>
