--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -1,126 +1,119 @@
-items:
 - name: Dokumentation om Azure Active Directory B2B
   href: index.yml
   items:
-  - name: Översikt
-    items:
-    - name: Vad är B2B-gästanvändaråtkomst?
-      href: what-is-b2b.md
-    - name: Jämför B2B med B2C
-      href: compare-with-b2c.md
-  - name: Snabbstarter
-    items:
-    - name: Lägga till gästanvändare på portalen
-      href: b2b-quickstart-add-guest-users-portal.md
-    - name: Lägga till gästanvändare med PowerShell
-      href: b2b-quickstart-invite-powershell.md
-  - name: Självstudier
-    items:
-    - name: Massinbjudan av B2B-gästanvändare
-      href: tutorial-bulk-invite.md
-    - name: Använda multifaktorautentisering
-      href: b2b-tutorial-require-mfa.md
-  - name: Exempel
-    items:
-    - name: Exempel på registreringsportal för självbetjäning
-      href: self-service-portal.md
-    - name: Kod och Azure PowerShell-exempel
-      href: code-samples.md
-  - name: Begrepp
-    items:
-    - name: B2B-licensiering
-      href: licensing-guidance.md
-    - name: Extern delning av B2B och Office 365
-      href: o365-external-user.md
-    - name: Inlösning av inbjudan
-      href: redemption-experience.md
-    - name: E-postinbjudan
-      href: invitation-email-elements.md
-    - name: Förstå B2B-användaren
-      href: user-properties.md
-    - name: Mappning av användaranspråk för B2B
-      href: claims-mapping.md
-    - name: Användartoken för B2B
-      href: user-token.md
-    - name: Villkorlig åtkomst för B2B
-      href: conditional-access.md
-    - name: B2B för hybridorganisationer
-      href: hybrid-organizations.md
-    - name: Aktuella begränsningar
-      href: current-limitations.md
-    expanded: false
-  - name: Instruktionsguider
-    items:
-    - name: Hantera inbjudningar
+    - name: Översikt
       items:
-      - name: Administratörer som lägger till B2B-användare
-        href: add-users-administrator.md
-      - name: Informationsarbetare som lägger till B2B-användare
-        href: add-users-information-worker.md
-      - name: Google-federation
-        href: google-federation.md
-      - name: Autentisering med engångskoder
-        href: one-time-passcode.md
-      - name: B2B-delningsprinciper
-        href: delegate-invitations.md
-      - name: Tillåta eller blockera inbjudningar
-        href: allow-deny-list.md
-      - name: Lägga till B2B-användare utan inbjudan
-        href: add-user-without-invite.md
-      - name: API och anpassning
-        href: customize-invitation-api.md
-    - name: Hantera gästkonton
+        - name: Vad är B2B-gästanvändaråtkomst?
+          href: what-is-b2b.md
+        - name: Jämför B2B med B2C
+          href: compare-with-b2c.md
+    - name: Snabbstarter
       items:
-      - name: Lägga till en B2B-användare till en roll
-        href: add-guest-to-role.md
-      - name: Dynamiska grupper och B2B-användare
-        href: use-dynamic-groups.md
-      - name: Förstå B2B-användaren
-        href: user-properties.md
-      - name: B2B för Azure AD-integrerade appar
-        href: configure-saas-apps.md
-    - name: Hantera åtkomst i en hybridorganisation
+        - name: Lägga till gästanvändare på portalen
+          href: b2b-quickstart-add-guest-users-portal.md
+        - name: Lägga till gästanvändare med PowerShell
+          href: b2b-quickstart-invite-powershell.md
+    - name: Självstudier
       items:
-      - name: Bevilja lokala användare åtkomst till molnappar
-        href: hybrid-on-premises-to-cloud.md
-      - name: Bevilja B2B-användare åtkomst till lokala appar
-        href: hybrid-cloud-to-on-premises.md
-    - name: Lämna en organisation
-      href: leave-the-organization.md
-    - name: Granskning och rapporter
-      href: auditing-and-reporting.md
-    - name: Felsökning av B2B
-      href: troubleshoot.md
-    expanded: true
-  - name: Referens
-    items:
-    - name: Invitation Manager-API
-      href: customize-invitation-api.md
-  - name: Resurser
-    items:
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: faq.md
-    - name: Få support för B2B
-      href: get-support.md
-    - name: Azures feedbackforum
-      href: https://feedback.azure.com/forums/169401-azure-active-directory
-    - name: Azure-översikt
-      href: https://azure.microsoft.com/roadmap/?category=security-identity
-    - name: MSDN-forum
-      href: https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=WindowsAzureAD
-    - name: Prissättning
-      href: https://azure.microsoft.com/pricing/details/active-directory/
-    - name: Priskalkylator
-      href: https://azure.microsoft.com/pricing/calculator/
-    - name: Tjänstuppdateringar
-      href: https://azure.microsoft.com/updates/?product=active-directory
-    - name: Stack Overflow
-      href: https://stackoverflow.com/questions/tagged/azure-active-directory
-    - name: Videoklipp
-      href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: cbd7c39f4c44675896075068697da79643174be4
-ms.sourcegitcommit: 94305d8ee91f217ec98039fde2ac4326761fea22
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57407843"
+        - name: Massinbjudan av B2B-gästanvändare
+          href: tutorial-bulk-invite.md
+        - name: Använda multifaktorautentisering
+          href: b2b-tutorial-require-mfa.md
+    - name: Exempel
+      items:
+        - name: Exempel på registreringsportal för självbetjäning
+          href: self-service-portal.md
+        - name: Kod och Azure PowerShell-exempel
+          href: code-samples.md
+    - name: Begrepp
+      expanded: false
+      items:
+        - name: B2B-licensiering
+          href: licensing-guidance.md
+        - name: Extern delning av B2B och Office 365
+          href: o365-external-user.md
+        - name: Inlösning av inbjudan
+          href: redemption-experience.md
+        - name: E-postinbjudan
+          href: invitation-email-elements.md
+        - name: Förstå B2B-användaren
+          href: user-properties.md
+        - name: Mappning av användaranspråk för B2B
+          href: claims-mapping.md
+        - name: Användartoken för B2B
+          href: user-token.md
+        - name: Villkorlig åtkomst för B2B
+          href: conditional-access.md
+        - name: B2B för hybridorganisationer
+          href: hybrid-organizations.md
+        - name: Aktuella begränsningar
+          href: current-limitations.md
+    - name: Instruktionsguider
+      expanded: true
+      items:
+        - name: Hantera inbjudningar
+          items:
+            - name: Administratörer som lägger till B2B-användare
+              href: add-users-administrator.md
+            - name: Informationsarbetare som lägger till B2B-användare
+              href: add-users-information-worker.md
+            - name: Google-federation
+              href: google-federation.md
+            - name: Autentisering med engångskoder
+              href: one-time-passcode.md
+            - name: B2B-delningsprinciper
+              href: delegate-invitations.md
+            - name: Tillåta eller blockera inbjudningar
+              href: allow-deny-list.md
+            - name: Lägga till B2B-användare utan inbjudan
+              href: add-user-without-invite.md
+            - name: API och anpassning
+              href: customize-invitation-api.md
+        - name: Hantera gästkonton
+          items:
+            - name: Lägga till en B2B-användare till en roll
+              href: add-guest-to-role.md
+            - name: Dynamiska grupper och B2B-användare
+              href: use-dynamic-groups.md
+            - name: Förstå B2B-användaren
+              href: user-properties.md
+            - name: B2B för Azure AD-integrerade appar
+              href: configure-saas-apps.md
+        - name: Hantera åtkomst i en hybridorganisation
+          items:
+            - name: Bevilja lokala användare åtkomst till molnappar
+              href: hybrid-on-premises-to-cloud.md
+            - name: Bevilja B2B-användare åtkomst till lokala appar
+              href: hybrid-cloud-to-on-premises.md
+        - name: Lämna en organisation
+          href: leave-the-organization.md
+        - name: Granskning och rapporter
+          href: auditing-and-reporting.md
+        - name: Felsökning av B2B
+          href: troubleshoot.md
+    - name: Referens
+      items:
+        - name: Invitation Manager-API
+          href: customize-invitation-api.md
+    - name: Resurser
+      items:
+        - name: VANLIGA FRÅGOR OCH SVAR
+          href: faq.md
+        - name: Få support för B2B
+          href: get-support.md
+        - name: Azures feedbackforum
+          href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
+        - name: Azure-översikt
+          href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
+        - name: MSDN-forum
+          href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=WindowsAzureAD'
+        - name: Prissättning
+          href: 'https://azure.microsoft.com/pricing/details/active-directory/'
+        - name: Priskalkylator
+          href: 'https://azure.microsoft.com/pricing/calculator/'
+        - name: Tjänstuppdateringar
+          href: 'https://azure.microsoft.com/updates/?product=active-directory'
+        - name: Stack Overflow
+          href: 'https://stackoverflow.com/questions/tagged/azure-active-directory'
+        - name: Videoklipp
+          href: 'https://azure.microsoft.com/documentation/videos/index/?services=active-directory'
