--- a/articles/active-directory/devices/index.yml
+++ b/articles/active-directory/devices/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 46eb23cf23506b950142068146283345db71a3ea
-ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/27/2019
-ms.locfileid: "58520827"
 documentType: LandingData
 title: Dokumentation om Azure AD-enhetshantering
 metadata:
-  document_id: 
-  title: Dokumentation om Azure AD-enhetshantering – Självstudier, koncept, referenser | Microsoft Docs
+  document_id: null
+  title: 'Dokumentation om Azure AD-enhetshantering – Självstudier, koncept, referenser | Microsoft Docs'
   description: Se hur du konfigurerar och testar enhetshantering för Azure Active Directory.
   services: active-directory
   ms.subservice: devices
@@ -24,18 +18,18 @@ metadata:
 abstract:
   description: Dina användare får åtkomst till gemensamma tillgångar genom sina enheter. Som IT-administratör vill du nog ha kontroll över de här enheterna så att du kan skydda de gemensamma tillgångarna. På så sätt kan du se till att användarna får åtkomst till resurserna från enheter som uppfyller dina krav för säkerhet och efterlevnad.<br>Enhetshantering utgör även grunden för enhetsbaserad villkorsstyrd åtkomst. Med enhetsbaserad villkorsstyrd åtkomst kan du se till att endast hanterade enheter kan komma åt resurserna i miljön.
 sections:
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Se hur du integrerar dina lokala AD-anslutna enheter med Azure AD.
-  - type: list
-    style: icon48
+  - title: Stegvisa självstudier
     items:
-    - image:
-        src: ./media/index/i_security-management.png
-      text: Hanterade domäner
-      href: hybrid-azuread-join-managed-domains.md
-    - image:
-        src: ./media/index/i_security-management.png
-      text: Federerade domäner
-      href: hybrid-azuread-join-federated-domains.md
+      - type: paragraph
+        text: Se hur du integrerar dina lokala AD-anslutna enheter med Azure AD.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: ./media/index/i_security-management.png
+            text: Hanterade domäner
+            href: hybrid-azuread-join-managed-domains.md
+          - image:
+              src: ./media/index/i_security-management.png
+            text: Federerade domäner
+            href: hybrid-azuread-join-federated-domains.md
