--- a/articles/active-directory/reports-monitoring/index.yml
+++ b/articles/active-directory/reports-monitoring/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 854e944d91c5d43131cf6a9c05e69d5684267022
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55161808"
 documentType: LandingData
 title: Rapporter och övervakning i Azure Active Directory
 metadata:
-  document_id: 
-  title: Dokumentation om rapporter och övervakning i Azure Active Directory – självstudier, snabbstarter, begrepp | Microsoft Docs
+  document_id: null
+  title: 'Dokumentation om rapporter och övervakning i Azure Active Directory – självstudier, snabbstarter, begrepp | Microsoft Docs'
   description: Se hur du konfigurerar och testar rapport- och övervakningslösningar för Azure Active Directory
   services: active-directory
   ms.subservice: report-monitor
@@ -22,33 +16,33 @@ metadata:
   ms.date: 08/14/2018
   ms.author: priyamo
 abstract:
-  description: Se hur du visar säkerhets- och granskningsrapporter för din miljö, och övervakar dem över tid för att få insikter i användningsmönster. Med Azure Active Directory (Azure AD)-rapporter kan du få insikter i säkerhets- och användningsmönstren i din miljö. Du kan till exempel besvara följande frågor:<ul><li>Hur används programmen eller tjänsterna av användarna?</li><li>Vilka är de potentiella riskerna som påverkar hälsotillståndet för miljön?</li><li>Hur felsöker du problem som hindrar användarna från att uträtta sitt arbete?</li>
+  description: 'Se hur du visar säkerhets- och granskningsrapporter för din miljö, och övervakar dem över tid för att få insikter i användningsmönster. Med Azure Active Directory (Azure AD)-rapporter kan du få insikter i säkerhets- och användningsmönstren i din miljö. Du kan till exempel besvara följande frågor:<ul><li>Hur används programmen eller tjänsterna av användarna?</li><li>Vilka är de potentiella riskerna som påverkar hälsotillståndet för miljön?</li><li>Hur felsöker du problem som hindrar användarna från att uträtta sitt arbete?</li>'
 sections:
-- title: Snabbstarter på fem minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du laddar ned aktivitetsrapporter och dirigerar loggarna till ett Azure Storage-konto
-  - type: list
-    style: unordered
+  - title: Snabbstarter på fem minuter
     items:
-    - html: <a href="/azure/active-directory/reports-monitoring/quickstart-download-sign-in-report">Ladda ned en inloggningsrapport</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/quickstart-download-audit-report">Ladda ned en granskningsrapport</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/quickstart-install-power-bi-content-pack">Installera Power BI-innehållspaketet för rapporter</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/quickstart-azure-monitor-route-logs-to-storage-account">Dirigera loggar till lagringskonto</a>
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du kommer åt dina rapporter och strömmar aktivitetsloggar till valfritt övervakningssystem
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du laddar ned aktivitetsrapporter och dirigerar loggarna till ett Azure Storage-konto
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/reports-monitoring/quickstart-download-sign-in-report">Ladda ned en inloggningsrapport</a>
+          - html: <a href="/azure/active-directory/reports-monitoring/quickstart-download-audit-report">Ladda ned en granskningsrapport</a>
+          - html: <a href="/azure/active-directory/reports-monitoring/quickstart-install-power-bi-content-pack">Installera Power BI-innehållspaketet för rapporter</a>
+          - html: <a href="/azure/active-directory/reports-monitoring/quickstart-azure-monitor-route-logs-to-storage-account">Dirigera loggar till lagringskonto</a>
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="/azure/active-directory/reports-monitoring/tutorial-access-api-with-certificates">Komma åt Reporting-API:t programmatiskt med certifikat</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/tutorial-azure-monitor-stream-logs-to-event-hub">Strömma aktivitetsloggar till en händelsehubb</a>
-- title: Referens
-  items:
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du kommer åt dina rapporter och strömmar aktivitetsloggar till valfritt övervakningssystem
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="/azure/active-directory/reports-monitoring/tutorial-access-api-with-certificates">Komma åt Reporting-API:t programmatiskt med certifikat</a>'
+          - html: <a href="/azure/active-directory/reports-monitoring/tutorial-azure-monitor-stream-logs-to-event-hub">Strömma aktivitetsloggar till en händelsehubb</a>
+  - title: Referens
     items:
-    - html: <a href="/azure/active-directory/reports-monitoring/reference-sign-ins-error-codes">Felkoder för inloggningar</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/reference-azure-monitor-audit-log-schema">Schema för Azure AD-spårningslogg i Azure Monitor</a>
-    - html: <a href="/azure/active-directory/reports-monitoring/reference-azure-monitor-sign-ins-log-schema">Schema för Azure AD-inloggningar i Azure Monitor</a>
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/reports-monitoring/reference-sign-ins-error-codes">Felkoder för inloggningar</a>
+          - html: <a href="/azure/active-directory/reports-monitoring/reference-azure-monitor-audit-log-schema">Schema för Azure AD-spårningslogg i Azure Monitor</a>
+          - html: <a href="/azure/active-directory/reports-monitoring/reference-azure-monitor-sign-ins-log-schema">Schema för Azure AD-inloggningar i Azure Monitor</a>
