--- a/articles/advisor/index.yml
+++ b/articles/advisor/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cfff978a6228b861c98940e5e1ce7947f1f4260a
-ms.sourcegitcommit: e51e940e1a0d4f6c3439ebe6674a7d0e92cdc152
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/08/2019
-ms.locfileid: "55891444"
 documentType: LandingData
 title: Dokumentation om Azure Advisor
 metadata:
   title: Dokumentation om Azure Advisor | Microsoft Docs
-  description: 
+  description: null
   services: advisor
   author: rboucher
   layout: LandingPage
@@ -19,33 +13,33 @@ metadata:
   ms.date: 02/01/2019
   ms.author: robb
 abstract:
-  description: Azure Advisor är en anpassad molnkonsult som hjälper dig att följa bästa praxis för att optimera dina Azure-distributioner. Den analyserar din resurskonfiguration och användningstelemetri. Den rekommenderar sedan lösningar för att förbättra prestanda, säkerhet och hög tillgänglighet för dina resurser samtidigt som den söker efter möjligheter att minska de totala Azure-kostnaderna.
+  description: 'Azure Advisor är en anpassad molnkonsult som hjälper dig att följa bästa praxis för att optimera dina Azure-distributioner. Den analyserar din resurskonfiguration och användningstelemetri. Den rekommenderar sedan lösningar för att förbättra prestanda, säkerhet och hög tillgänglighet för dina resurser samtidigt som den söker efter möjligheter att minska de totala Azure-kostnaderna.'
 sections:
-- title: 
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+  - title: null
     items:
-    - title: Läs om Azure Advisor
-      href: /azure/advisor/advisor-overview
-      image:
-        src: media/index/advisor.svg
-        href: /azure/advisor/advisor-overview
-    - title: Kom igång med Azure Advisor
-      href: /azure/advisor/advisor-get-started
-      image:
-        src: media/index/get-started.svg
-        href: /azure/advisor/advisor-get-started
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Läs om Azure Advisor
+            href: /azure/advisor/advisor-overview
+            image:
+              src: media/index/advisor.svg
+              href: /azure/advisor/advisor-overview
+          - title: Kom igång med Azure Advisor
+            href: /azure/advisor/advisor-get-started
+            image:
+              src: media/index/get-started.svg
+              href: /azure/advisor/advisor-get-started
+  - title: Referens
     items:
-    - title: REST
-      html: <p><a href="https://docs.microsoft.com/rest/api/advisor/">REST API-referens</a></p>
-    - title: Kommandorad
-      html: <p><a href="https://docs.microsoft.com/cli/azure/advisor?view=azure-cli-latest">Common Language Interface (CLI)</a></p>
-    - title: PowerShell
-      html: <p><a href="https://docs.microsoft.com/powershell/module/az.advisor/?view=azps-1.2.0">Azure PowerShell</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST
+            html: '<p><a href="https://docs.microsoft.com/rest/api/advisor/">REST API-referens</a></p>'
+          - title: Kommandorad
+            html: '<p><a href="https://docs.microsoft.com/cli/azure/advisor?view=azure-cli-latest">Common Language Interface (CLI)</a></p>'
+          - title: PowerShell
+            html: '<p><a href="https://docs.microsoft.com/powershell/module/az.advisor/?view=azps-1.2.0">Azure PowerShell</a></p>'
