--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a22269560d485dcd98aaaabb88dbbba545d26a2d
-ms.sourcegitcommit: 62759a225d8fe1872b60ab0441d1c7ac809f9102
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49467919"
 documentType: LandingData
 title: Azure Kubernetes Service (AKS)
 metadata:
-  document_id: 
-  title: Dokumentation om Azure Kubernetes Service (AKS) – Självstudier, API-referens | Microsoft Docs
-  meta.description: AKS allows you to quickly deploy a production ready Kubernetes cluster in Azure. Learn how to use AKS with these quickstarts, tutorials, and samples.
+  document_id: null
+  title: 'Dokumentation om Azure Kubernetes Service (AKS) – Självstudier, API-referens | Microsoft Docs'
+  meta.description: 'AKS allows you to quickly deploy a production ready Kubernetes cluster in Azure. Learn how to use AKS with these quickstarts, tutorials, and samples.'
   services: container-service
   author: carolz
   manager: carolz
@@ -21,90 +15,90 @@ metadata:
   ms.date: 07-21-2017
   ms.author: carolz
 abstract:
-  description: Azure Kubernetes Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera containerbaserade program utan kunskaper om orkestrering av containrar. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program.
+  description: 'Azure Kubernetes Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera containerbaserade program utan kunskaper om orkestrering av containrar. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar ett AKS-kluster:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
-      text: Azure CLI
-      href: /azure/aks/kubernetes-walkthrough
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/aks/kubernetes-walkthrough-portal
-  - type: paragraph
-    text: 'Lär dig hur du utvecklar och felsöker program med AKS:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar ett AKS-kluster:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Azure CLI
+            href: /azure/aks/kubernetes-walkthrough
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/aks/kubernetes-walkthrough-portal
+      - type: paragraph
+        text: 'Lär dig hur du utvecklar och felsöker program med AKS:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_java.svg'
+            text: Java
+            href: ../dev-spaces/quickstart-java.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NETcore.svg'
+            text: .NET och VS Code
+            href: ../dev-spaces/quickstart-netcore.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: .NET och Visual Studio
+            href: ../dev-spaces/quickstart-netcore-visualstudio.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_nodejs.svg'
+            text: Node.js
+            href: ../dev-spaces/quickstart-nodejs.md
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_java.svg
-      text: Java
-      href: ../dev-spaces/quickstart-java.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NETcore.svg
-      text: .NET och VS Code
-      href: ../dev-spaces/quickstart-netcore.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: .NET och Visual Studio
-      href: ../dev-spaces/quickstart-netcore-visualstudio.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
-      text: Node.js
-      href: ../dev-spaces/quickstart-nodejs.md
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera, hantera och uppdatera program på ett AKS-kluster.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och uppdatera program på ett AKS-kluster.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-deploy-cluster">Distribuera ett AKS-kluster</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-upgrade-cluster">Uppgradera AKS-kluster</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-deploy-cluster">Distribuera ett AKS-kluster</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-upgrade-cluster">Uppgradera AKS-kluster</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Introduktion till behållare i Azure
+            href: /learn/modules/intro-to-containers/
+            image:
+              src: /learn/achievements/intro-to-containers.svg
+              href: /learn/modules/intro-to-containers/
+          - title: Kör Docker-behållare i Azure Container Instances
+            href: /learn/modules/run-docker-with-azure-container-instances/
+            image:
+              src: /learn/achievements/run-docker-with-azure-container-instances.svg
+              href: /learn/modules/run-docker-with-azure-container-instances/
+          - title: Skapa och lagra containeravbildningar med Azure Container Registry
+            href: /learn/modules/build-and-store-container-images/
+            image:
+              src: /learn/achievements/build-and-store-container-images.svg
+              href: /learn/modules/build-and-store-container-images/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-container-registry%2Cazure-container-instances">Mer interaktiv inlärning...</a>
+  - title: Referens
     items:
-    - title: Introduktion till behållare i Azure
-      href: /learn/modules/intro-to-containers/
-      image:
-        src: /learn/achievements/intro-to-containers.svg
-        href: /learn/modules/intro-to-containers/
-    - title: Kör Docker-behållare i Azure Container Instances
-      href: /learn/modules/run-docker-with-azure-container-instances/
-      image:
-        src: /learn/achievements/run-docker-with-azure-container-instances.svg
-        href: /learn/modules/run-docker-with-azure-container-instances/
-    - title: Skapa och lagra containeravbildningar med Azure Container Registry
-      href: /learn/modules/build-and-store-container-images/
-      image:
-        src: /learn/achievements/build-and-store-container-images.svg
-        href: /learn/modules/build-and-store-container-images/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-container-registry%2Cazure-container-instances">Mer interaktiv inlärning...</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/aks">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/containerservice">NET</a></p><p><a href="/python/api/overview/azure/containerservice">Python</a></p><p><a href="/java/api/overview/azure/containerservice">Java</a></p><p><a href="/javascript/api/overview/azure/container-service">Node.js</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/aks">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/aks">Azure CLI</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/overview/azure/containerservice">NET</a></p><p><a href="/python/api/overview/azure/containerservice">Python</a></p><p><a href="/java/api/overview/azure/containerservice">Java</a></p><p><a href="/javascript/api/overview/azure/container-service">Node.js</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/aks">REST-API</a></p>
