--- a/articles/azure-signalr/index.yml
+++ b/articles/azure-signalr/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2b7bbac4de56bce7696b543c07bd40028db5e7a0
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57533076"
 documentType: LandingData
 title: Dokumentation för Azure SignalR Service
 metadata:
   document_id: 44409b3f-ab8c-053d-cdf4-5d7e823a275f
-  title: Dokumentation för Azure SignalR Service – Självstudier, API-referens
+  title: 'Dokumentation för Azure SignalR Service – Självstudier, API-referens'
   meta.description: Azure SignalR Service is an Azure managed service that helps developers easily build web applications with real-time features. This service is based on ASP.NET Core SignalR which is an open source library that simplifies adding real-time web functionality to applications.
   services: azure-signalr
   author: v-chmccl
@@ -22,60 +16,60 @@ metadata:
 abstract:
   description: Azure SignalR Service är en Azure-hanterad tjänst som hjälper utvecklare att enkelt skapa webbappar med realtidsfunktioner.
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du utvecklar din första webbapp med Azure SignalR Service för kommunikation i realtid:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NETcore.svg
-      text: ASP.NET Core
-      href: /azure/azure-signalr/signalr-quickstart-dotnet-core
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_js.svg
-      text: JavaScript
-      href: /azure/azure-signalr/signalr-quickstart-azure-functions-javascript
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Csharp.svg
-      text: C#
-      href: /azure/azure-signalr/signalr-quickstart-azure-functions-csharp
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/logo_java.svg
-      text: Java
-      href: /azure/azure-signalr/signalr-quickstart-azure-functions-java
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_REST.svg
-      text: REST-API
-      href: /azure/azure-signalr/signalr-quickstart-rest-api
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att skapa Azure SignalR Service-program
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur du utvecklar din första webbapp med Azure SignalR Service för kommunikation i realtid:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NETcore.svg'
+            text: ASP.NET Core
+            href: /azure/azure-signalr/signalr-quickstart-dotnet-core
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_js.svg'
+            text: JavaScript
+            href: /azure/azure-signalr/signalr-quickstart-azure-functions-javascript
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Csharp.svg'
+            text: 'C#'
+            href: /azure/azure-signalr/signalr-quickstart-azure-functions-csharp
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/logo_java.svg'
+            text: Java
+            href: /azure/azure-signalr/signalr-quickstart-azure-functions-java
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_REST.svg'
+            text: REST-API
+            href: /azure/azure-signalr/signalr-quickstart-rest-api
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="/azure/azure-signalr/signalr-authenticate-oauth">Integrera Azure SignalR Service med ASP.NET Core-identitet</a>
-    - html: <a href="/azure/azure-signalr/signalr-tutorial-authenticate-azure-functions">Skapa en app utan server i realtid med autentisering</a>
-- title: Exempel
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Lär dig att skapa Azure SignalR Service-program
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/azure-signalr/signalr-authenticate-oauth">Integrera Azure SignalR Service med ASP.NET Core-identitet</a>
+          - html: <a href="/azure/azure-signalr/signalr-tutorial-authenticate-azure-functions">Skapa en app utan server i realtid med autentisering</a>
+  - title: Exempel
     items:
-    - html: <a href="https://github.com/aspnet/AzureSignalR-samples">Azure SignalR Code-exempel</a>
-    - html: <a href="/azure/azure-signalr/signalr-cli-samples">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/aspnet/AzureSignalR-samples">Azure SignalR Code-exempel</a>'
+          - html: <a href="/azure/azure-signalr/signalr-cli-samples">Azure CLI</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="signalr-reference-cli.md">Azure CLI</a></p>
-    - title: Språk
-      html: >
-        <p><a href="https://docs.microsoft.com/aspnet/core">ASP.NET Core Server-SDK</a></p> <p><a href="/azure/azure-functions/functions-bindings-signalr-service">Bindningar för Azure Functions</a></p> <p><a href="https://docs.microsoft.com/aspnet/core/signalr/javascript-client">Javascript-klient</a></p> <p><a href="https://docs.microsoft.com/aspnet/core/signalr/dotnet-client">.NET Standard-klient</a></p> <p><a href="https://github.com/aspnet/SignalR/tree/release/2.2/clients/java/signalr">Java-klient</a></p>
-    - title: REST
-      html: <p><a href="https://github.com/Azure/azure-signalr/blob/dev/docs/rest-api.md">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="signalr-reference-cli.md">Azure CLI</a></p>
+          - title: Språk
+            html: |
+              <p><a href="https://docs.microsoft.com/aspnet/core">ASP.NET Core Server-SDK</a></p> <p><a href="/azure/azure-functions/functions-bindings-signalr-service">Bindningar för Azure Functions</a></p> <p><a href="https://docs.microsoft.com/aspnet/core/signalr/javascript-client">Javascript-klient</a></p> <p><a href="https://docs.microsoft.com/aspnet/core/signalr/dotnet-client">.NET Standard-klient</a></p> <p><a href="https://github.com/aspnet/SignalR/tree/release/2.2/clients/java/signalr">Java-klient</a></p>
+          - title: REST
+            html: '<p><a href="https://github.com/Azure/azure-signalr/blob/dev/docs/rest-api.md">REST-API</a></p>'
