--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -1,40 +1,33 @@
-items:
 - name: Dokumentation om Azure Cognitive Services
   href: index.md
 - name: Översikt
-  items:
-  - name: Vad är Cognitive Services?
-    href: Welcome.md
-  - name: Stöd för språk
-    href: language-support.md
-  - name: Stöd för containrar
-    href: cognitive-services-container-support.md
   expanded: true
+  items:
+    - name: Vad är Cognitive Services?
+      href: Welcome.md
+    - name: Stöd för språk
+      href: language-support.md
+    - name: Stöd för containrar
+      href: cognitive-services-container-support.md
 - name: Snabbstarter
   items:
-  - name: Skapa ett konto
-    href: cognitive-services-apis-create-account.md
-  - name: Autentisering
-    href: authentication.md
+    - name: Skapa ett konto
+      href: cognitive-services-apis-create-account.md
+    - name: Autentisering
+      href: authentication.md
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=cognitive-services
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/cognitive-services/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Videoklipp
-    href: https://azure.microsoft.com/resources/videos/index/?services=cognitive-services
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=cognitive-services
-  - name: Uppförandekod
-    href: https://go.microsoft.com/fwlink/?LinkId=698895
-  - name: Kunskapsbas
-    href: https://cognitive.uservoice.com/knowledgebase
-ms.openlocfilehash: 975c681b3cd30fe7f5b3bd6cd39371a9d66ff27a
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57545421"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=cognitive-services'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=cognitive-services'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
+    - name: Uppförandekod
+      href: 'https://go.microsoft.com/fwlink/?LinkId=698895'
+    - name: Kunskapsbas
+      href: 'https://cognitive.uservoice.com/knowledgebase'
