--- a/articles/cognitive-services/bing-local-business-search/toc.yml
+++ b/articles/cognitive-services/bing-local-business-search/toc.yml
@@ -1,52 +1,46 @@
-items:
 - name: Dokumentation om API för sökning efter lokala företag i Bing
   href: index.yml
   expanded: true
+  items: null
 - name: Översikt
-  items:
-  - name: Vad är API:et för sökning efter lokala företag i Bing?
-    href: overview.md
-  - name: 'Jämför API: erna för Bing-sökresultat'
-    href: ../Bing-Web-Search/bing-api-comparison.md
-    maintainContext: true
   expanded: true
+  items:
+    - name: 'Vad är API:et för sökning efter lokala företag i Bing?'
+      href: overview.md
+    - name: 'Jämför API: erna för Bing-sökresultat'
+      href: ../Bing-Web-Search/bing-api-comparison.md
+      maintainContext: true
 - name: Snabbstarter
   items:
-  - name: REST-API
-    items:
-    - name: Använd C#
-      href: quickstarts/local-quickstart.md
-    - name: Använda Java
-      href: quickstarts/local-search-java-quickstart.md
-    - name: Använda Node
-      href: quickstarts/local-search-node-quickstart.md
-    - name: Använda Python
-      href: quickstarts/local-search-python-quickstart.md
-    expanded: true
+    - name: REST-API
+      expanded: true
+      items:
+        - name: 'Använd C#'
+          href: quickstarts/local-quickstart.md
+        - name: Använda Java
+          href: quickstarts/local-search-java-quickstart.md
+        - name: Använda Node
+          href: quickstarts/local-search-node-quickstart.md
+        - name: Använda Python
+          href: quickstarts/local-search-python-quickstart.md
 - name: Begrepp
   items:
-  - name: Arbeta med frågor och svar
-    href: local-search-query-response.md
-  - name: Filtrera resultaten genom att ange geografiska gränser
-    href: specify-geographic-search.md
-  - name: Sökkategorier för lokala företag
-    href: local-categories.md
+    - name: Arbeta med frågor och svar
+      href: local-search-query-response.md
+    - name: Filtrera resultaten genom att ange geografiska gränser
+      href: specify-geographic-search.md
+    - name: Sökkategorier för lokala företag
+      href: local-categories.md
 - name: Referens
   items:
-  - name: Använda och visa krav
-    href: ../Bing-Web-Search/use-display-requirements.md
-    maintainContext: true
-  - name: API-referens för sökning efter lokala företag
-    href: local-search-reference.md
+    - name: Använda och visa krav
+      href: ../Bing-Web-Search/use-display-requirements.md
+      maintainContext: true
+    - name: API-referens för sökning efter lokala företag
+      href: local-search-reference.md
 - name: Resurser
   items:
-  - name: Testa Cognitive Services
-    href: https://azure.microsoft.com/en-us/try/cognitive-services/?api=bing-web-search-api
-  - name: Prisinformation
-    href: https://azure.microsoft.com/en-us/pricing/details/cognitive-services/search-api/
-ms.openlocfilehash: 14c891c74accb4cca537e24ddbdcb99ae36618c9
-ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55507509"
+    - name: Testa Cognitive Services
+      href: 'https://azure.microsoft.com/en-us/try/cognitive-services/?api=bing-web-search-api'
+    - name: Prisinformation
+      href: 'https://azure.microsoft.com/en-us/pricing/details/cognitive-services/search-api/'
