--- a/articles/cognitive-services/video-indexer/toc.yml
+++ b/articles/cognitive-services/video-indexer/toc.yml
@@ -1,55 +1,48 @@
-items:
 - name: Dokumentation om Video Indexer
 - name: Översikt
   items:
-  - name: Vad är Video Indexer?
-    href: ../../media-services/video-indexer/video-indexer-overview.md
-  - name: Begrepp
-    href: ../../media-services/video-indexer/video-indexer-concepts.md
+    - name: Vad är Video Indexer?
+      href: ../../media-services/video-indexer/video-indexer-overview.md
+    - name: Begrepp
+      href: ../../media-services/video-indexer/video-indexer-concepts.md
 - name: Snabbstarter
-  items:
-  - name: Kom igång
-    href: ../../media-services/video-indexer/video-indexer-get-started.md
   expanded: true
+  items:
+    - name: Kom igång
+      href: ../../media-services/video-indexer/video-indexer-get-started.md
 - name: Guider
   items:
-  - name: Migrera från v1 till v2
-    href: ../../media-services/video-indexer/migrate-from-v1-to-v2.md
-  - name: Anslut till Azure
-    href: ../../media-services/video-indexer/connect-to-azure.md
-  - name: Hantera konto som är anslutet till Azure
-    href: ../../media-services/video-indexer/manage-account-connected-to-azure.md
-  - name: Använda Video Indexer-API
-    href: ../../media-services/video-indexer/video-indexer-use-apis.md
-  - name: Använda API för att ladda upp och indexera videor
-    href: ../../media-services/video-indexer/upload-index-videos.md
-  - name: Undersöka utdata för Video Indexer
-    href: ../../media-services/video-indexer/video-indexer-output-json-v2.md
-  - name: Hitta exakta ögonblick i videor
-    href: ../../media-services/video-indexer/video-indexer-search.md
-  - name: Visa och redigera Video Indexer-insikter
-    href: ../../media-services/video-indexer/video-indexer-view-edit.md
-  - name: Skapa videoinsikter utifrån befintliga videor
-    href: ../../media-services/video-indexer/video-indexer-create-new.md
-  - name: Bädda in widgetar i programmet
-    href: ../../media-services/video-indexer/video-indexer-embed-widgets.md
+    - name: Migrera från v1 till v2
+      href: ../../media-services/video-indexer/migrate-from-v1-to-v2.md
+    - name: Anslut till Azure
+      href: ../../media-services/video-indexer/connect-to-azure.md
+    - name: Hantera konto som är anslutet till Azure
+      href: ../../media-services/video-indexer/manage-account-connected-to-azure.md
+    - name: Använda Video Indexer-API
+      href: ../../media-services/video-indexer/video-indexer-use-apis.md
+    - name: Använda API för att ladda upp och indexera videor
+      href: ../../media-services/video-indexer/upload-index-videos.md
+    - name: Undersöka utdata för Video Indexer
+      href: ../../media-services/video-indexer/video-indexer-output-json-v2.md
+    - name: Hitta exakta ögonblick i videor
+      href: ../../media-services/video-indexer/video-indexer-search.md
+    - name: Visa och redigera Video Indexer-insikter
+      href: ../../media-services/video-indexer/video-indexer-view-edit.md
+    - name: Skapa videoinsikter utifrån befintliga videor
+      href: ../../media-services/video-indexer/video-indexer-create-new.md
+    - name: Bädda in widgetar i programmet
+      href: ../../media-services/video-indexer/video-indexer-embed-widgets.md
 - name: Referens
   items:
-  - name: Video Indexer-API
-    href: https://api-portal.videoindexer.ai/
+    - name: Video Indexer-API
+      href: 'https://api-portal.videoindexer.ai/'
 - name: Resurser
   items:
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/cognitive-services/video-indexer/
-  - name: UserVoice
-    href: https://cognitive.uservoice.com/forums/598144-video-indexer
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/microsoft-cognitive
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
-ms.openlocfilehash: 5283cc39c64c31d6b9014043bf37e066cef582a7
-ms.sourcegitcommit: beb4fa5b36e1529408829603f3844e433bea46fe
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "52290764"
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/video-indexer/'
+    - name: UserVoice
+      href: 'https://cognitive.uservoice.com/forums/598144-video-indexer'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/microsoft-cognitive'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=ai-machine-learning'
