--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f03ece417ef5db891efe32a662a092ebf6072b33
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57848169"
 documentType: LandingData
 title: Dokumentation om Azure Data Factory
 metadata:
-  title: Dokumentation om Azure Data Factory – Självstudier, API-referens | Microsoft Docs
-  description: Lär dig hur du använder Data Factory för att konfigurera automatiska datapipelines till och från källor på lokala platser och i molnet, för att flytta och bearbeta data för analys.
+  title: 'Dokumentation om Azure Data Factory – Självstudier, API-referens | Microsoft Docs'
+  description: 'Lär dig hur du använder Data Factory för att konfigurera automatiska datapipelines till och från källor på lokala platser och i molnet, för att flytta och bearbeta data för analys.'
   services: data-factory
   author: sharonlo101
   ms.author: shlo
@@ -19,86 +13,86 @@ metadata:
   ms.topic: overview
   ms.date: 08/06/2018
 abstract:
-  description: Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines samt flyttar och omvandlar data för analys. <p>Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>
+  description: 'Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines samt flyttar och omvandlar data för analys. <p>Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video.png
       width: 250
     title: 'Nya funktioner för modern dataintegrering i molnet (1: 19:22)'
-    href: https://channel9.msdn.com/Events/Build/2018/BRK2204/player
+    href: 'https://channel9.msdn.com/Events/Build/2018/BRK2204/player'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skapar en Data Factory-pipeline för att flytta och bearbeta data med någon av följande snabbstarter:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/data-factory/media/index/portal.svg
-      text: Data Factory-användargränssnitt
-      href: /azure/data-factory/quickstart-create-data-factory-portal
-    - image:
-        src: /azure/data-factory/media/index/copy-data-tool.png
-      text: Kopiera data-verktyg
-      href: /azure/data-factory/quickstart-create-data-factory-copy-data-tool
-    - image:
-        src: /azure/data-factory/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/data-factory/quickstart-create-data-factory-powershell
-    - image:
-        src: /azure/data-factory/media/index/logo_net.svg
-      text: .NET
-      href: /azure/data-factory/quickstart-create-data-factory-dot-net
-    - image:
-        src: /azure/data-factory/media/index/logo_python.svg
-      text: Python
-      href: /azure/data-factory/quickstart-create-data-factory-python
-    - image:
-        src: /azure/data-factory/media/index/logo_rest.svg
-      text: REST
-      href: /azure/data-factory/quickstart-create-data-factory-rest-api
-    - image:
-        src: /azure/data-factory/media/index/logo_azure_resource_manager.svg
-      text: Resource Manager-mall
-      href: /azure/data-factory/quickstart-create-data-factory-resource-manager-template
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig att skapa och övervaka en datafabrik:'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar en Data Factory-pipeline för att flytta och bearbeta data med någon av följande snabbstarter:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/data-factory/media/index/portal.svg
+            text: Data Factory-användargränssnitt
+            href: /azure/data-factory/quickstart-create-data-factory-portal
+          - image:
+              src: /azure/data-factory/media/index/copy-data-tool.png
+            text: Kopiera data-verktyg
+            href: /azure/data-factory/quickstart-create-data-factory-copy-data-tool
+          - image:
+              src: /azure/data-factory/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/data-factory/quickstart-create-data-factory-powershell
+          - image:
+              src: /azure/data-factory/media/index/logo_net.svg
+            text: .NET
+            href: /azure/data-factory/quickstart-create-data-factory-dot-net
+          - image:
+              src: /azure/data-factory/media/index/logo_python.svg
+            text: Python
+            href: /azure/data-factory/quickstart-create-data-factory-python
+          - image:
+              src: /azure/data-factory/media/index/logo_rest.svg
+            text: REST
+            href: /azure/data-factory/quickstart-create-data-factory-rest-api
+          - image:
+              src: /azure/data-factory/media/index/logo_azure_resource_manager.svg
+            text: Resource Manager-mall
+            href: /azure/data-factory/quickstart-create-data-factory-resource-manager-template
+  - title: Steg för steg-självstudier
     items:
-    - html: Kopiera data i molnet – <a href="/azure/data-factory/tutorial-copy-data-tool">verktyget för att kopiera data</a> | <a href="/azure/data-factory/tutorial-copy-data-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-copy-data-dot-net">.NET</a>
-    - html: Kopiera lokala data till molnet – <a href="/azure/data-factory/tutorial-hybrid-copy-data-tool">verktyget för att kopiera data | <a href="/azure/data-factory/tutorial-hybrid-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-hybrid-copy-powershell">Azure PowerShell</a>
-    - html: Masskopiera data – <a href="/azure/data-factory/tutorial-bulk-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-bulk-copy">Azure PowerShell</a>
-    - html: Kopiera data inkrementellt – <a href="/azure/data-factory/tutorial-incremental-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-incremental-copy-powershell">Azure PowerShell</a>
-    - html: Omvandla data i molnet med Spark – <a href="/azure/data-factory/tutorial-transform-data-spark-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-spark-powershell">Azure PowerShell</a>
-    - html: Omvandla data i ett virtuellt nätverk – <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network">Azure PowerShell</a>
-    - html: Lägga till branchning och länkning – <a href="/azure/data-factory/tutorial-control-flow-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-control-flow">.NET</a>
-    - html: Köra SSIS-paket i Azure – <a href="/azure/data-factory/tutorial-create-azure-ssis-runtime-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure PowerShell</a>
-    - html: Kontinuerlig integrering och leverans (CI/CD) i Azure Data Factory – <a href="/azure/data-factory/continuous-integration-deployment">Data Factory UI</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Använd följande exempel för att arbeta med Data Factory
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig att skapa och övervaka en datafabrik:'
+      - type: list
+        style: unordered
+        items:
+          - html: Kopiera data i molnet – <a href="/azure/data-factory/tutorial-copy-data-tool">verktyget för att kopiera data</a> | <a href="/azure/data-factory/tutorial-copy-data-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-copy-data-dot-net">.NET</a>
+          - html: Kopiera lokala data till molnet – <a href="/azure/data-factory/tutorial-hybrid-copy-data-tool">verktyget för att kopiera data | <a href="/azure/data-factory/tutorial-hybrid-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-hybrid-copy-powershell">Azure PowerShell</a>
+          - html: Masskopiera data – <a href="/azure/data-factory/tutorial-bulk-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-bulk-copy">Azure PowerShell</a>
+          - html: Kopiera data inkrementellt – <a href="/azure/data-factory/tutorial-incremental-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-incremental-copy-powershell">Azure PowerShell</a>
+          - html: Omvandla data i molnet med Spark – <a href="/azure/data-factory/tutorial-transform-data-spark-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-spark-powershell">Azure PowerShell</a>
+          - html: Omvandla data i ett virtuellt nätverk – <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network">Azure PowerShell</a>
+          - html: Lägga till branchning och länkning – <a href="/azure/data-factory/tutorial-control-flow-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-control-flow">.NET</a>
+          - html: Köra SSIS-paket i Azure – <a href="/azure/data-factory/tutorial-create-azure-ssis-runtime-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure PowerShell</a>
+          - html: Kontinuerlig integrering och leverans (CI/CD) i Azure Data Factory – <a href="/azure/data-factory/continuous-integration-deployment">Data Factory UI</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/data-factory/samples-powershell">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Använd följande exempel för att arbeta med Data Factory
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/data-factory/samples-powershell">PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/az.datafactory/">Azure PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.datafactory">NET</a></p><p><a href="/python/api/overview/azure/datafactory?view=azure-python">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/datafactory">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/az.datafactory/">Azure PowerShell</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/microsoft.azure.management.datafactory">NET</a></p><p><a href="/python/api/overview/azure/datafactory?view=azure-python">Python</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/datafactory">REST-API</a></p>
