--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -1,163 +1,156 @@
-items:
 - name: Dokumentation om Data Lake Analytics
   href: index.md
 - name: Översikt
   items:
-  - name: Vad är Data Lake Analytics?
-    href: data-lake-analytics-overview.md
+    - name: Vad är Data Lake Analytics?
+      href: data-lake-analytics-overview.md
 - name: Kom igång
   items:
-  - name: Azure Portal
-    href: data-lake-analytics-get-started-portal.md
-  - name: Visual Studio
-    href: data-lake-analytics-data-lake-tools-get-started.md
-  - name: Visual Studio-koden
-    href: data-lake-analytics-data-lake-tools-for-vscode.md
-  - name: Azure PowerShell
-    href: data-lake-analytics-get-started-powershell.md
-  - name: Azure CLI
-    href: data-lake-analytics-get-started-cli.md
+    - name: Azure Portal
+      href: data-lake-analytics-get-started-portal.md
+    - name: Visual Studio
+      href: data-lake-analytics-data-lake-tools-get-started.md
+    - name: Visual Studio-koden
+      href: data-lake-analytics-data-lake-tools-for-vscode.md
+    - name: Azure PowerShell
+      href: data-lake-analytics-get-started-powershell.md
+    - name: Azure CLI
+      href: data-lake-analytics-get-started-cli.md
 - name: Gör så här för att
   items:
-  - name: Hantera Data Lake Analytics
-    items:
-    - name: Azure Portal
-      href: data-lake-analytics-manage-use-portal.md
-    - name: Kommandorad
+    - name: Hantera Data Lake Analytics
       items:
-      - name: Azure CLI
-        href: data-lake-analytics-manage-use-cli.md
-      - name: Azure PowerShell
-        href: data-lake-analytics-manage-use-powershell.md
-    - name: SDK:er
+        - name: Azure Portal
+          href: data-lake-analytics-manage-use-portal.md
+        - name: Kommandorad
+          items:
+            - name: Azure CLI
+              href: data-lake-analytics-manage-use-cli.md
+            - name: Azure PowerShell
+              href: data-lake-analytics-manage-use-powershell.md
+        - name: 'SDK:er'
+          items:
+            - name: .NET
+              href: data-lake-analytics-manage-use-dotnet-sdk.md
+            - name: Python
+              href: data-lake-analytics-manage-use-python-sdk.md
+            - name: Java
+              href: data-lake-analytics-manage-use-java-sdk.md
+            - name: Node.js
+              href: data-lake-analytics-manage-use-nodejs.md
+        - name: Lägga till användare
+          href: data-lake-analytics-add-users.md
+        - name: Principer
+          href: data-lake-analytics-policies.md
+        - name: Skydda jobbmappar
+          href: data-lake-analytics-secure.md
+        - name: Få åtkomst till diagnostikloggar
+          href: data-lake-analytics-diagnostic-logs.md
+        - name: Justera kvotgränser
+          href: data-lake-analytics-quota-limits.md
+    - name: Utveckla U-SQL-program
       items:
-      - name: .NET
-        href: data-lake-analytics-manage-use-dotnet-sdk.md
-      - name: Python
-        href: data-lake-analytics-manage-use-python-sdk.md
-      - name: Java
-        href: data-lake-analytics-manage-use-java-sdk.md
-      - name: Node.js
-        href: data-lake-analytics-manage-use-nodejs.md
-    - name: Lägga till användare
-      href: data-lake-analytics-add-users.md
-    - name: Principer
-      href: data-lake-analytics-policies.md
-    - name: Skydda jobbmappar
-      href: data-lake-analytics-secure.md
-    - name: Få åtkomst till diagnostikloggar
-      href: data-lake-analytics-diagnostic-logs.md
-    - name: Justera kvotgränser
-      href: data-lake-analytics-quota-limits.md
-  - name: Utveckla U-SQL-program
-    items:
-    - name: U-SQL-språk
+        - name: U-SQL-språk
+          items:
+            - name: Grundläggande inställningar
+              href: data-lake-analytics-u-sql-get-started.md
+            - name: Språkreferens
+              href: 'https://msdn.microsoft.com/library/azure/mt591959'
+            - name: Katalog
+              href: data-lake-analytics-u-sql-catalog.md
+            - name: Användardefinierade operatörer
+              href: data-lake-analytics-u-sql-develop-user-defined-operators.md
+            - name: Python-tillägg
+              href: data-lake-analytics-u-sql-python-extensions.md
+            - name: R-tillägg
+              href: data-lake-analytics-u-sql-r-extensions.md
+            - name: Kognitiva tillägg
+              href: data-lake-analytics-u-sql-cognitive.md
+            - name: Programmeringsguide
+              href: data-lake-analytics-u-sql-programmability-guide.md
+        - name: Visual Studio
+          items:
+            - name: Installera
+              href: data-lake-analytics-data-lake-tools-install.md
+            - name: Lokal körning
+              href: data-lake-analytics-data-lake-tools-local-run.md
+            - name: Lokal felsökning
+              href: data-lake-analytics-data-lake-tools-local-debug.md
+            - name: Utveckla U-SQL-databaser
+              href: data-lake-analytics-data-lake-tools-develop-usql-database.md
+            - name: Bläddra och visa jobb
+              href: data-lake-analytics-data-lake-tools-view-jobs.md
+            - name: 'Felsöka anpassad C#-kod'
+              href: data-lake-analytics-debug-u-sql-jobs.md
+            - name: Felsöka återkommande jobb
+              href: data-lake-analytics-data-lake-tools-debug-recurring-job.md
+            - name: Information om brytpunktskörning
+              href: data-lake-analytics-data-lake-tools-use-vertex-execution-view.md
+            - name: Exportera U-SQL-databas
+              href: data-lake-analytics-data-lake-tools-export-database.md
+            - name: Analysera webbplatsloggar
+              href: data-lake-analytics-analyze-weblogs.md
+            - name: Lösa datasnedställning
+              href: data-lake-analytics-data-lake-tools-data-skew-solutions.md
+            - name: Övervaka och felsöka jobb
+              href: data-lake-analytics-monitor-and-troubleshoot-jobs-tutorial.md
+        - name: Visual Studio-koden
+          items:
+            - name: Redigering
+              href: data-lake-analytics-data-lake-tools-for-vscode.md
+            - name: Anpassad kod
+              href: data-lake-analytics-u-sql-develop-with-python-r-csharp-in-vscode.md
+            - name: Lokal körning och felsökning
+              href: data-lake-tools-for-vscode-local-run-and-debug.md
+    - name: Schemalägga U-SQL-jobb
       items:
-      - name: Grundläggande inställningar
-        href: data-lake-analytics-u-sql-get-started.md
-      - name: Språkreferens
-        href: https://msdn.microsoft.com/library/azure/mt591959
-      - name: Katalog
-        href: data-lake-analytics-u-sql-catalog.md
-      - name: Användardefinierade operatörer
-        href: data-lake-analytics-u-sql-develop-user-defined-operators.md
-      - name: Python-tillägg
-        href: data-lake-analytics-u-sql-python-extensions.md
-      - name: R-tillägg
-        href: data-lake-analytics-u-sql-r-extensions.md
-      - name: Kognitiva tillägg
-        href: data-lake-analytics-u-sql-cognitive.md
-      - name: Programmeringsguide
-        href: data-lake-analytics-u-sql-programmability-guide.md
-    - name: Visual Studio
+        - name: Schemalägga jobb med SSIS
+          href: data-lake-analytics-schedule-jobs-ssis.md
+    - name: Kontinuerlig integrering och distribution
       items:
-      - name: Installera
-        href: data-lake-analytics-data-lake-tools-install.md
-      - name: Lokal körning
-        href: data-lake-analytics-data-lake-tools-local-run.md
-      - name: Lokal felsökning
-        href: data-lake-analytics-data-lake-tools-local-debug.md
-      - name: Utveckla U-SQL-databaser
-        href: data-lake-analytics-data-lake-tools-develop-usql-database.md
-      - name: Bläddra och visa jobb
-        href: data-lake-analytics-data-lake-tools-view-jobs.md
-      - name: Felsöka anpassad C#-kod
-        href: data-lake-analytics-debug-u-sql-jobs.md
-      - name: Felsöka återkommande jobb
-        href: data-lake-analytics-data-lake-tools-debug-recurring-job.md
-      - name: Information om brytpunktskörning
-        href: data-lake-analytics-data-lake-tools-use-vertex-execution-view.md
-      - name: Exportera U-SQL-databas
-        href: data-lake-analytics-data-lake-tools-export-database.md
-      - name: Analysera webbplatsloggar
-        href: data-lake-analytics-analyze-weblogs.md
-      - name: Lösa datasnedställning
-        href: data-lake-analytics-data-lake-tools-data-skew-solutions.md
-      - name: Övervaka och felsöka jobb
-        href: data-lake-analytics-monitor-and-troubleshoot-jobs-tutorial.md
-    - name: Visual Studio-koden
-      items:
-      - name: Redigering
-        href: data-lake-analytics-data-lake-tools-for-vscode.md
-      - name: Anpassad kod
-        href: data-lake-analytics-u-sql-develop-with-python-r-csharp-in-vscode.md
-      - name: Lokal körning och felsökning
-        href: data-lake-tools-for-vscode-local-run-and-debug.md
-  - name: Schemalägga U-SQL-jobb
-    items:
-    - name: Schemalägga jobb med SSIS
-      href: data-lake-analytics-schedule-jobs-ssis.md
-  - name: Kontinuerlig integrering och distribution
-    items:
-    - name: Översikt
-      href: data-lake-analytics-cicd-overview.md
-    - name: Sammansättningsregistrering
-      href: data-lake-analytics-cicd-manage-assemblies.md
-    - name: Konfigurera tester
-      href: data-lake-analytics-cicd-test.md
-    - name: U-SQL SDK
-      href: data-lake-analytics-u-sql-sdk.md
+        - name: Översikt
+          href: data-lake-analytics-cicd-overview.md
+        - name: Sammansättningsregistrering
+          href: data-lake-analytics-cicd-manage-assemblies.md
+        - name: Konfigurera tester
+          href: data-lake-analytics-cicd-test.md
+        - name: U-SQL SDK
+          href: data-lake-analytics-u-sql-sdk.md
 - name: Referens
   items:
-  - name: Azure PowerShell
-    href: /powershell/module/az.datalakeanalytics
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.management.datalake.analytics
-  - name: Node.js
-    href: https://www.npmjs.com/package/azure-arm-datalake-analytics
-  - name: Python
-    href: https://docs.microsoft.com/python/api/overview/azure/data-lake-analytics?view=azure-python
-  - name: REST
-    href: /rest/api/datalakeanalytics/
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.datalakeanalytics/allversions
-  - name: CLI
-    href: https://docs.microsoft.com/cli/azure/dla
+    - name: Azure PowerShell
+      href: /powershell/module/az.datalakeanalytics
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.management.datalake.analytics
+    - name: Node.js
+      href: 'https://www.npmjs.com/package/azure-arm-datalake-analytics'
+    - name: Python
+      href: 'https://docs.microsoft.com/python/api/overview/azure/data-lake-analytics?view=azure-python'
+    - name: REST
+      href: /rest/api/datalakeanalytics/
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.datalakeanalytics/allversions
+    - name: CLI
+      href: 'https://docs.microsoft.com/cli/azure/dla'
 - name: Resurser
   items:
-  - name: Azure Data Lake-blogg
-    href: https://blogs.msdn.microsoft.com/azuredatalake/
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
-  - name: Begära ändringar
-    href: https://feedback.azure.com/forums/327234-data-lake
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataLake
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/data-lake-analytics/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=data-lake-analytics
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-data-lake
-  - name: Videoklipp
-    href: https://azure.microsoft.com/resources/videos/index/?services=data-lake-analytics
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=data-lake-analytics
-ms.openlocfilehash: 34553cebfdad45477b0442e9966b3b15c81bd1f4
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58340990"
+    - name: Azure Data Lake-blogg
+      href: 'https://blogs.msdn.microsoft.com/azuredatalake/'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
+    - name: Begära ändringar
+      href: 'https://feedback.azure.com/forums/327234-data-lake'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataLake'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/data-lake-analytics/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=data-lake-analytics'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-data-lake'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=data-lake-analytics'
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=data-lake-analytics'
