--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 65845d3f46732772a0e181b6409554b64075fe30
-ms.sourcegitcommit: 8d88a025090e5087b9d0ab390b1207977ef4ff7c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 11/21/2018
-ms.locfileid: "52274378"
 documentType: LandingData
 title: Dokumentation om Azure Digital Twins
 metadata:
-  title: Dokumentation om Azure Digital Twins – Självstudier, API-referens | Microsoft Docs
+  title: 'Dokumentation om Azure Digital Twins – Självstudier, API-referens | Microsoft Docs'
   description: Använd Azure Digital Twins för att skapa smarta rumsliga lösningar.
   author: dsk-2015
   manager: timlt
@@ -18,20 +12,20 @@ metadata:
   ms.date: 10/15/2018
   ms.author: dkshir
 abstract:
-  description: Lär dig hur du använder Azure Digital Twins för att ansluta personer, platser och saker och för att skapa IoT-lösningar med spatial intelligens. Gå igenom snabbstarten och självstudierna för att övervaka en tänkt smart byggnad, lär dig mer djupgående begrepp och skapa en nästa generations IoT-lösning som bygger på din fysiska miljö.
+  description: 'Lär dig hur du använder Azure Digital Twins för att ansluta personer, platser och saker och för att skapa IoT-lösningar med spatial intelligens. Gå igenom snabbstarten och självstudierna för att övervaka en tänkt smart byggnad, lär dig mer djupgående begrepp och skapa en nästa generations IoT-lösning som bygger på din fysiska miljö.'
 sections:
-- title: Snabbstart på fem minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du <a href="quickstart-view-occupancy-dotnet">hittar tillgängliga rum med god luftkvalitet genom att använda Azure Digital Twins .NET-exempel</a>.
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du anpassar och använder din Azure Digital Twins-lösning för att övervaka dina anläggningar.
-  - type: list
-    style: ordered
+  - title: Snabbstart på fem minuter
     items:
-    - html: <a href="/azure/digital-twins/tutorial-facilities-setup">Etablera en exempelbyggnad</a>
-    - html: <a href="/azure/digital-twins/tutorial-facilities-udf">Övervaka byggnadens tillstånd</a>
-    - html: <a href="/azure/digital-twins/tutorial-facilities-events">Ta emot aviseringar från byggnaden</a>
-    - html: <a href="/azure/digital-twins/tutorial-facilities-analyze">Analysera händelser från din byggnad</a>
+      - type: paragraph
+        text: Lär dig hur du <a href="quickstart-view-occupancy-dotnet">hittar tillgängliga rum med god luftkvalitet genom att använda Azure Digital Twins .NET-exempel</a>.
+  - title: Steg för steg-självstudier
+    items:
+      - type: paragraph
+        text: Lär dig hur du anpassar och använder din Azure Digital Twins-lösning för att övervaka dina anläggningar.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/digital-twins/tutorial-facilities-setup">Etablera en exempelbyggnad</a>
+          - html: <a href="/azure/digital-twins/tutorial-facilities-udf">Övervaka byggnadens tillstånd</a>
+          - html: <a href="/azure/digital-twins/tutorial-facilities-events">Ta emot aviseringar från byggnaden</a>
+          - html: <a href="/azure/digital-twins/tutorial-facilities-analyze">Analysera händelser från din byggnad</a>
