--- a/articles/expressroute/index.yml
+++ b/articles/expressroute/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 108f737f88f8b470846b3699fb4cccce6e08541f
-ms.sourcegitcommit: 94305d8ee91f217ec98039fde2ac4326761fea22
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57409099"
 documentType: LandingData
 title: ExpressRoute dokumentation
 metadata:
-  document_id: 
+  document_id: null
   title: ExpressRoute
-  meta.description: Learn how to use ExpressRoute. Tutorials, REST APIs and other documentation show you how to configure and manage an ExpressRoute circuit.
+  meta.description: 'Learn how to use ExpressRoute. Tutorials, REST APIs and other documentation show you how to configure and manage an ExpressRoute circuit.'
   author: cherylmc
   manager: jeconnoc
   ms.service: ExpressRoute
@@ -20,42 +14,42 @@ metadata:
   ms.date: 05/18/2018
   ms.author: cherylmc
 abstract:
-  description: Lär dig hur du använder ExpressRoute för att konfigurera en snabb, privat anslutning till Microsoft Cloud-tjänster från din infrastruktur på plats eller delade miljö. Självstudier, REST API:er och annan dokumentation hjälper dig att konfigurera och hantera en ExpressRoute-krets.
+  description: 'Lär dig hur du använder ExpressRoute för att konfigurera en snabb, privat anslutning till Microsoft Cloud-tjänster från din infrastruktur på plats eller delade miljö. Självstudier, REST API:er och annan dokumentation hjälper dig att konfigurera och hantera en ExpressRoute-krets.'
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du konfigurerar och hanterar en ExpressRoute-krets.
-  - type: list
-    style: unordered
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/expressroute/expressroute-howto-circuit-portal-resource-manager">Skapa och ändra en ExpressRoute-krets</a>
-    - html: <a href="/azure/expressroute/expressroute-howto-routing-portal-resource-manager">Skapa och ändra peering-konfigurationen</a>
-    - html: <a href="/azure/expressroute/expressroute-howto-linkvnet-portal-resource-manager">Länka ett virtuellt nätverk till en ExpressRoute-krets</a>
-    - html: <a href="/azure/expressroute/how-to-routefilter-portal">Konfigurera routningsfilter för Microsoft-peering</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Lär dig hur du konfigurerar och hanterar en ExpressRoute-krets.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/expressroute/expressroute-howto-circuit-portal-resource-manager">Skapa och ändra en ExpressRoute-krets</a>
+          - html: <a href="/azure/expressroute/expressroute-howto-routing-portal-resource-manager">Skapa och ändra peering-konfigurationen</a>
+          - html: <a href="/azure/expressroute/expressroute-howto-linkvnet-portal-resource-manager">Länka ett virtuellt nätverk till en ExpressRoute-krets</a>
+          - html: <a href="/azure/expressroute/how-to-routefilter-portal">Konfigurera routningsfilter för Microsoft-peering</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+          - title: Azure-lösningsarkitekt
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/az.network/#expressroute">PowerShell</a></p><p><a href="/cli/azure/network/express-route">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="https://msdn.microsoft.com/library/azure/mt586720">REST API-referens</a></p><p><a href="https://msdn.microsoft.com/library/azure/dn606310">Referens för klassiskt REST API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/powershell/module/az.network/#expressroute">PowerShell</a></p><p><a href="/cli/azure/network/express-route">Azure CLI</a></p>'
+          - title: REST
+            html: '<p><a href="https://msdn.microsoft.com/library/azure/mt586720">REST API-referens</a></p><p><a href="https://msdn.microsoft.com/library/azure/dn606310">Referens för klassiskt REST API</a></p>'
