--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -1,112 +1,105 @@
-items:
 - name: Dokumentation om Azure HDInsight
   href: /azure/hdinsight
 - name: Företagssäkerhet
   items:
-  - name: Översikt
-    href: apache-domain-joined-introduction.md
-  - name: Planera för ESP-kluster
-    href: apache-domain-joined-architecture.md
-  - name: Konfigurera ESP-kluster med Azure AD DS
-    href: apache-domain-joined-configure-using-azure-adds.md
-  - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
-    href: ../hdinsight-sync-aad-users-to-cluster.md
-    maintainContext: true
-  - name: Konfigurera Apache Hive-principer
-    href: apache-domain-joined-run-hive.md
-  - name: Apache HBase RBAC med Apache Ranger
-    href: apache-domain-joined-run-hbase.md
-  - name: Apache Kafka RBAC med Apache Ranger
-    href: apache-domain-joined-run-kafka.md
-    maintainContext: true
-  - name: Använda VSCode för att länka till ESP-kluster
-    href: ../hdinsight-for-vscode.md
-    maintainContext: true
-  - name: Använda IntelliJ för att länka till ESP-kluster
-    href: ../spark/apache-spark-intellij-tool-plugin.md
-    maintainContext: true
-  - name: Använda Eclipse för att länka till ESP-kluster
-    href: ../spark/apache-spark-eclipse-tool-plugin.md
-    maintainContext: true
-  - name: Använda Apache Oozie i ESP-kluster
-    href: hdinsight-use-oozie-domain-joined-clusters.md
+    - name: Översikt
+      href: apache-domain-joined-introduction.md
+    - name: Planera för ESP-kluster
+      href: apache-domain-joined-architecture.md
+    - name: Konfigurera ESP-kluster med Azure AD DS
+      href: apache-domain-joined-configure-using-azure-adds.md
+    - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
+      href: ../hdinsight-sync-aad-users-to-cluster.md
+      maintainContext: true
+    - name: Konfigurera Apache Hive-principer
+      href: apache-domain-joined-run-hive.md
+    - name: Apache HBase RBAC med Apache Ranger
+      href: apache-domain-joined-run-hbase.md
+    - name: Apache Kafka RBAC med Apache Ranger
+      href: apache-domain-joined-run-kafka.md
+      maintainContext: true
+    - name: Använda VSCode för att länka till ESP-kluster
+      href: ../hdinsight-for-vscode.md
+      maintainContext: true
+    - name: Använda IntelliJ för att länka till ESP-kluster
+      href: ../spark/apache-spark-intellij-tool-plugin.md
+      maintainContext: true
+    - name: Använda Eclipse för att länka till ESP-kluster
+      href: ../spark/apache-spark-eclipse-tool-plugin.md
+      maintainContext: true
+    - name: Använda Apache Oozie i ESP-kluster
+      href: hdinsight-use-oozie-domain-joined-clusters.md
 - name: Skydda data
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
   maintainContext: true
 - name: Nätverksåtkomst
   items:
-  - name: HDInsight i ett virtuellt Azure-nätverk
-    href: ../hdinsight-extend-hadoop-virtual-network.md
-    maintainContext: true
-  - name: Ansluta HDInsight till det lokala nätverket
-    href: ../connect-on-premises-network.md
-    maintainContext: true
-  - name: Skapa Apache HBase-kluster i ett virtuellt Azure-nätverk
-    href: ../hbase/apache-hbase-provision-vnet.md
-    maintainContext: true
-  - name: Replikering av Apache HBase-kluster i ett virtuellt Azure-nätverk
-    href: ../hbase/apache-hbase-replication.md
-    maintainContext: true
+    - name: HDInsight i ett virtuellt Azure-nätverk
+      href: ../hdinsight-extend-hadoop-virtual-network.md
+      maintainContext: true
+    - name: Ansluta HDInsight till det lokala nätverket
+      href: ../connect-on-premises-network.md
+      maintainContext: true
+    - name: Skapa Apache HBase-kluster i ett virtuellt Azure-nätverk
+      href: ../hbase/apache-hbase-provision-vnet.md
+      maintainContext: true
+    - name: Replikering av Apache HBase-kluster i ett virtuellt Azure-nätverk
+      href: ../hbase/apache-hbase-replication.md
+      maintainContext: true
 - name: Övervaka med hjälp av Azure Monitor-loggar
   items:
-  - name: Använda Azure Monitor-loggar
-    href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-    maintainContext: true
-  - name: Använda frågor med Azure Monitor-loggar
-    href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-    maintainContext: true
-  - name: Övervaka klusterprestanda
-    href: ../hdinsight-key-scenarios-to-monitor.md
-    maintainContext: true
+    - name: Använda Azure Monitor-loggar
+      href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+      maintainContext: true
+    - name: Använda frågor med Azure Monitor-loggar
+      href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+      maintainContext: true
+    - name: Övervaka klusterprestanda
+      href: ../hdinsight-key-scenarios-to-monitor.md
+      maintainContext: true
 - name: Referens
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=hdinsight
-  - name: Azure PowerShell
-    href: /powershell/module/az.hdinsight
-  - name: .NET SDK
-    href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
-  - name: Python SDK
-    href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
-  - name: Java SDK
-    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
-  - name: Go SDK
-    href: ../hdinsight-go-sdk-overview.md
-  - name: .NET (Apache HBase)
-    href: https://www.nuget.org/packages/Microsoft.HBase.Client/
-  - name: REST
-    href: /rest/api/hdinsight/
-  - name: REST (Apache Spark)
-    href: /rest/api/hdinsightspark/
-  - name: Resource Manager-mall
-    displayName: resource manager template, arm template, resource manager group
-    href: /azure/templates/microsoft.hdinsight/allversions
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=hdinsight'
+    - name: Azure PowerShell
+      href: /powershell/module/az.hdinsight
+    - name: .NET SDK
+      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet'
+    - name: Python SDK
+      href: 'https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python'
+    - name: Java SDK
+      href: 'https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview'
+    - name: Go SDK
+      href: ../hdinsight-go-sdk-overview.md
+    - name: .NET (Apache HBase)
+      href: 'https://www.nuget.org/packages/Microsoft.HBase.Client/'
+    - name: REST
+      href: /rest/api/hdinsight/
+    - name: REST (Apache Spark)
+      href: /rest/api/hdinsightspark/
+    - name: Resource Manager-mall
+      displayName: 'resource manager template, arm template, resource manager group'
+      href: /azure/templates/microsoft.hdinsight/allversions
 - name: Resurser
   items:
-  - name: Viktig information
-    items:
-    - name: Aktuell viktig information
-      href: ../hdinsight-release-notes.md
+    - name: Viktig information
+      items:
+        - name: Aktuell viktig information
+          href: ../hdinsight-release-notes.md
+          maintainContext: true
+        - name: Arkiverad viktig information
+          href: ../hdinsight-release-notes-archive.md
+          maintainContext: true
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
+    - name: Få hjälp i forumet
+      href: 'https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight'
+    - name: Utbildningsväg
+      href: 'https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/'
+    - name: Microsoft Professional Program för stordata
+      href: 'https://academy.microsoft.com/en-us/professional-program/big-data/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Windows-verktyg för HDInsight
+      href: ../hdinsight-hadoop-windows-tools.md
       maintainContext: true
-    - name: Arkiverad viktig information
-      href: ../hdinsight-release-notes-archive.md
-      maintainContext: true
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
-  - name: Få hjälp i forumet
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
-  - name: Utbildningsväg
-    href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
-  - name: Microsoft Professional Program för stordata
-    href: https://academy.microsoft.com/en-us/professional-program/big-data/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Windows-verktyg för HDInsight
-    href: ../hdinsight-hadoop-windows-tools.md
-    maintainContext: true
-ms.openlocfilehash: a5fbf08dbe808a2e476edd90c3eaad29bc7fa1a1
-ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/16/2019
-ms.locfileid: "59615735"
