--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -1,256 +1,249 @@
-items:
 - name: Azure DB för MySQL-dokument
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Azure DB for MySQL?
-    href: overview.md
+    - name: Vad är Azure DB for MySQL?
+      href: overview.md
 - name: Snabbstarter
-  items:
-  - name: Skapa DB – Portal
-    href: quickstart-create-mysql-server-database-using-azure-portal.md
-  - name: Skapa DB – Azure CLI
-    href: quickstart-create-mysql-server-database-using-azure-cli.md
-  - name: Skapa DB – Azure CLI up-kommando
-    href: quickstart-create-server-up-azure-cli.md
-  - name: Ansluta och fråga
-    items:
-    - name: PHP
-      href: connect-php.md
-    - name: Java
-      href: connect-java.md
-    - name: .Net
-      href: connect-csharp.md
-    - name: Python
-      href: connect-python.md
-    - name: Node.js
-      href: connect-nodejs.md
-    - name: Ruby
-      href: connect-ruby.md
-    - name: C++
-      href: connect-cpp.md
-    - name: Go
-      href: connect-go.md
-    - name: MySQL Workbench
-      href: connect-workbench.md
   expanded: true
+  items:
+    - name: Skapa DB – Portal
+      href: quickstart-create-mysql-server-database-using-azure-portal.md
+    - name: Skapa DB – Azure CLI
+      href: quickstart-create-mysql-server-database-using-azure-cli.md
+    - name: Skapa DB – Azure CLI up-kommando
+      href: quickstart-create-server-up-azure-cli.md
+    - name: Ansluta och fråga
+      items:
+        - name: PHP
+          href: connect-php.md
+        - name: Java
+          href: connect-java.md
+        - name: .Net
+          href: connect-csharp.md
+        - name: Python
+          href: connect-python.md
+        - name: Node.js
+          href: connect-nodejs.md
+        - name: Ruby
+          href: connect-ruby.md
+        - name: C++
+          href: connect-cpp.md
+        - name: Go
+          href: connect-go.md
+        - name: MySQL Workbench
+          href: connect-workbench.md
 - name: Självstudier
   items:
-  - name: 1 – Utforma en databas
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-portal.md
-    - name: Azure CLI
-      href: tutorial-design-database-using-cli.md
-    - name: Azure Resource Manager-mall
-      href: tutorial-provision-mysql-server-using-Azure-Resource-Manager-templates.md
-  - name: 2 – Skapa en webbapp
-    items:
-    - name: WordPress in containrar med MySQL
-      href: ../app-service/containers/tutorial-multi-container-app.md
-      maintainContext: true
-    - name: PHP med MySQL
-      href: ../app-service/app-service-web-tutorial-php-mysql.md
-      maintainContext: true
+    - name: 1 – Utforma en databas
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-portal.md
+        - name: Azure CLI
+          href: tutorial-design-database-using-cli.md
+        - name: Azure Resource Manager-mall
+          href: tutorial-provision-mysql-server-using-Azure-Resource-Manager-templates.md
+    - name: 2 – Skapa en webbapp
+      items:
+        - name: WordPress in containrar med MySQL
+          href: ../app-service/containers/tutorial-multi-container-app.md
+          maintainContext: true
+        - name: PHP med MySQL
+          href: ../app-service/app-service-web-tutorial-php-mysql.md
+          maintainContext: true
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure CLI
+      href: sample-scripts-azure-cli.md
 - name: Begrepp
   items:
-  - name: Databas och servrar
-    items:
-    - name: Servrar
-      href: concepts-servers.md
-    - name: Versioner som stöds
-      href: concepts-supported-versions.md
-    - name: Hög tillgänglighet
-      href: concepts-high-availability.md
-  - name: Resurser
-    items:
-    - name: Prisnivåer
-      href: concepts-pricing-tiers.md
-    - name: Begränsningar
-      href: concepts-limits.md
-  - name: Dataåtkomst och säkerhet
-    items:
-    - name: Brandväggsregler
-      href: concepts-firewall-rules.md
-    - name: Konfigurerar SSL
-      href: concepts-ssl-connection-security.md
-    - name: Advanced Threat Protection
-      href: concepts-data-access-and-security-threat-protection.md
-    - name: VNet
-      href: concepts-data-access-and-security-vnet.md
-  - name: Verksamhetskontinuitet
-    items:
-    - name: Översikt
-      href: concepts-business-continuity.md
-    - name: Säkerhetskopiering och återställning
-      href: concepts-backup.md
-  - name: Övervaka
-    items:
-    - name: Övervaka
-      href: concepts-monitoring.md
-    - name: Serverloggar
-      href: concepts-server-logs.md
-  - name: Utveckling
-    items:
-    - name: Kompatibilitet för drivrutiner och verktyg
-      href: concepts-compatibility.md
-    - name: Programutveckling
-      href: concepts-database-application-development.md
-    - name: Anslutningsåterhämtning
-      href: concepts-connectivity.md
-    - name: Utveckla med Azure Kubernetes Service (AKS)
-      href: concepts-aks.md
-    - name: Java
+    - name: Databas och servrar
       items:
-      - name: Konfigurera Spring Data JDBC
-        href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-mysql
-      - name: Konfigurera Spring Data JPA
-        href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-mysql
-  - name: Replikering
-    items:
-    - name: Dataintensiv replikering
-      href: concepts-data-in-replication.md
-    - name: Skrivskyddade repliker
-      href: concepts-read-replicas.md
+        - name: Servrar
+          href: concepts-servers.md
+        - name: Versioner som stöds
+          href: concepts-supported-versions.md
+        - name: Hög tillgänglighet
+          href: concepts-high-availability.md
+    - name: Resurser
+      items:
+        - name: Prisnivåer
+          href: concepts-pricing-tiers.md
+        - name: Begränsningar
+          href: concepts-limits.md
+    - name: Dataåtkomst och säkerhet
+      items:
+        - name: Brandväggsregler
+          href: concepts-firewall-rules.md
+        - name: Konfigurerar SSL
+          href: concepts-ssl-connection-security.md
+        - name: Advanced Threat Protection
+          href: concepts-data-access-and-security-threat-protection.md
+        - name: VNet
+          href: concepts-data-access-and-security-vnet.md
+    - name: Verksamhetskontinuitet
+      items:
+        - name: Översikt
+          href: concepts-business-continuity.md
+        - name: Säkerhetskopiering och återställning
+          href: concepts-backup.md
+    - name: Övervaka
+      items:
+        - name: Övervaka
+          href: concepts-monitoring.md
+        - name: Serverloggar
+          href: concepts-server-logs.md
+    - name: Utveckling
+      items:
+        - name: Kompatibilitet för drivrutiner och verktyg
+          href: concepts-compatibility.md
+        - name: Programutveckling
+          href: concepts-database-application-development.md
+        - name: Anslutningsåterhämtning
+          href: concepts-connectivity.md
+        - name: Utveckla med Azure Kubernetes Service (AKS)
+          href: concepts-aks.md
+        - name: Java
+          items:
+            - name: Konfigurera Spring Data JDBC
+              href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-mysql
+            - name: Konfigurera Spring Data JPA
+              href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-mysql
+    - name: Replikering
+      items:
+        - name: Dataintensiv replikering
+          href: concepts-data-in-replication.md
+        - name: Skrivskyddade repliker
+          href: concepts-read-replicas.md
 - name: Instruktionsguider
   items:
-  - name: Hantera en server
-    items:
-    - name: Azure Portal
-      href: howto-create-manage-server-portal.md
-  - name: Brandväggsregler
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-firewall-using-cli.md
-  - name: Återställ en server
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-    - name: Azure CLI
-      href: howto-restore-server-cli.md
-  - name: Migrera en databas
-    items:
-    - name: Dumpa och återställa
-      href: concepts-migrate-dump-restore.md
-    - name: Importera och exportera
-      href: concepts-migrate-import-export.md
-    - name: Minimal stilleståndstid vid migrering
-      href: howto-migrate-online.md
-  - name: Anslut program
-    items:
-    - name: Skapa användare
-      href: howto-create-users.md
-    - name: Anslutningssträngar
-      href: howto-connection-string.md
-    - name: Konfigurera SSL
-      href: howto-configure-ssl.md
-    - name: Webbappar
-      href: howto-connect-webapp.md
-  - name: Konfigurera serverparametrar
-    items:
-    - name: Azure Portal
-      href: howto-server-parameters.md
-    - name: Azure CLI
-      href: howto-configure-server-parameters-using-cli.md
-  - name: Åtkomst till serverloggar
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-logs-in-portal.md
-    - name: Azure CLI
-      href: howto-configure-server-logs-in-cli.md
-  - name: Övervaka
-    items:
-    - name: Skapa aviseringar för mått
-      href: howto-alert-on-metric.md
-  - name: Replikering
-    items:
-    - name: Konfigurera dataintensiv replikering
-      href: howto-data-in-replication.md
-    - name: Skapa skrivskyddade repliker på Azure-portalen
-      href: howto-read-replicas-portal.md
-    - name: Skapa skrivskyddade repliker i Azure CLI
-      href: howto-read-replicas-cli.md
-  - name: Felsöka
-    items:
-    - name: Felsöka anslutningsfel
-      href: howto-troubleshoot-common-connection-issues.md
-    - name: Felsöka frågeprestanda
-      href: howto-troubleshoot-query-performance.md
-    - name: Använda vyer i sys-schema
-      href: howto-troubleshoot-sys-schema.md
-  - name: Advanced Threat Protection
-    items:
-    - name: Azure Portal
-      href: howto-database-threat-protection-portal.md
-  - name: Virtual Network
-    items:
-    - name: Azure Portal
-      href: howto-manage-vnet-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-vnet-using-cli.md
-  - name: Starta om servern
-    items:
-    - name: Azure Portal
-      href: howto-restart-server-portal.md
-    - name: Azure CLI
-      href: howto-restart-server-cli.md
+    - name: Hantera en server
+      items:
+        - name: Azure Portal
+          href: howto-create-manage-server-portal.md
+    - name: Brandväggsregler
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-firewall-using-cli.md
+    - name: Återställ en server
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+        - name: Azure CLI
+          href: howto-restore-server-cli.md
+    - name: Migrera en databas
+      items:
+        - name: Dumpa och återställa
+          href: concepts-migrate-dump-restore.md
+        - name: Importera och exportera
+          href: concepts-migrate-import-export.md
+        - name: Minimal stilleståndstid vid migrering
+          href: howto-migrate-online.md
+    - name: Anslut program
+      items:
+        - name: Skapa användare
+          href: howto-create-users.md
+        - name: Anslutningssträngar
+          href: howto-connection-string.md
+        - name: Konfigurera SSL
+          href: howto-configure-ssl.md
+        - name: Webbappar
+          href: howto-connect-webapp.md
+    - name: Konfigurera serverparametrar
+      items:
+        - name: Azure Portal
+          href: howto-server-parameters.md
+        - name: Azure CLI
+          href: howto-configure-server-parameters-using-cli.md
+    - name: Åtkomst till serverloggar
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-logs-in-portal.md
+        - name: Azure CLI
+          href: howto-configure-server-logs-in-cli.md
+    - name: Övervaka
+      items:
+        - name: Skapa aviseringar för mått
+          href: howto-alert-on-metric.md
+    - name: Replikering
+      items:
+        - name: Konfigurera dataintensiv replikering
+          href: howto-data-in-replication.md
+        - name: Skapa skrivskyddade repliker på Azure-portalen
+          href: howto-read-replicas-portal.md
+        - name: Skapa skrivskyddade repliker i Azure CLI
+          href: howto-read-replicas-cli.md
+    - name: Felsöka
+      items:
+        - name: Felsöka anslutningsfel
+          href: howto-troubleshoot-common-connection-issues.md
+        - name: Felsöka frågeprestanda
+          href: howto-troubleshoot-query-performance.md
+        - name: Använda vyer i sys-schema
+          href: howto-troubleshoot-sys-schema.md
+    - name: Advanced Threat Protection
+      items:
+        - name: Azure Portal
+          href: howto-database-threat-protection-portal.md
+    - name: Virtual Network
+      items:
+        - name: Azure Portal
+          href: howto-manage-vnet-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-vnet-using-cli.md
+    - name: Starta om servern
+      items:
+        - name: Azure Portal
+          href: howto-restart-server-portal.md
+        - name: Azure CLI
+          href: howto-restart-server-cli.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/mysql
-  - name: REST-API
-    href: /rest/api/mysql
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.dbformysql/allversions
-  - name: Lagrade procedurer för dataintensiv replikering
-    href: reference-data-in-stored-procedures.md
+    - name: Azure CLI
+      href: /cli/azure/mysql
+    - name: REST-API
+      href: /rest/api/mysql
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.dbformysql/allversions
+    - name: Lagrade procedurer för dataintensiv replikering
+      href: reference-data-in-stored-procedures.md
 - name: Resurser
   items:
-  - name: Distributionsmallar
-    href: https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbformysql
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=databases
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/mysql/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/security/en-US/home?forum=AzureDatabaseforMySQL
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-database-mysql
-  - name: Videoklipp
-    items:
-    - name: Produktvideor
-      href: videos.md
-    - name: Videoserier med instruktioner
+    - name: Distributionsmallar
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbformysql'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/mysql/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/forums/security/en-US/home?forum=AzureDatabaseforMySQL'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-database-mysql'
+    - name: Videoklipp
       items:
-      - name: Lär dig mer om produktfunktioner och fördelar
-        href: https://aka.ms/mysql-intro-vid
-      - name: Migrera din MySQL-app till Azure
-        href: https://aka.ms/mysql-migrate-vid
-      - name: Skapa och distribuera Web Apps
-        href: https://aka.ms/mysql-webapps-vid
-      - name: Anslut containrar med OSBA
-        href: https://aka.ms/mysql-osba-vid
-  - name: Begär en funktion
-    href: https://feedback.azure.com/forums/597982-azure-database-for-mysql
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
-  - name: Kundberättelser
-    href: https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20MySQL%20"
-  - name: Partner
-    href: partners-migration-mysql.md
-  - name: Guide för databasmigrering
-    href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 625316fef2cba47dd2d718b22f8ca4f922e74793
-ms.sourcegitcommit: f8c592ebaad4a5fc45710dadc0e5c4480d122d6f
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58620214"
+        - name: Produktvideor
+          href: videos.md
+        - name: Videoserier med instruktioner
+          items:
+            - name: Lär dig mer om produktfunktioner och fördelar
+              href: 'https://aka.ms/mysql-intro-vid'
+            - name: Migrera din MySQL-app till Azure
+              href: 'https://aka.ms/mysql-migrate-vid'
+            - name: Skapa och distribuera Web Apps
+              href: 'https://aka.ms/mysql-webapps-vid'
+            - name: Anslut containrar med OSBA
+              href: 'https://aka.ms/mysql-osba-vid'
+    - name: Begär en funktion
+      href: 'https://feedback.azure.com/forums/597982-azure-database-for-mysql'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
+    - name: Kundberättelser
+      href: 'https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20MySQL%20"'
+    - name: Partner
+      href: partners-migration-mysql.md
+    - name: Guide för databasmigrering
+      href: 'https://datamigration.microsoft.com/'
