--- a/articles/sdks/index.yml
+++ b/articles/sdks/index.yml
@@ -1,20 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a8fb9e23b478f3dd61e8152100a2be554c162f1b
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53538199"
 documentType: LandingData
-title: SDK:er
+title: 'SDK:er'
 metadata:
-  title: SDK:er
+  title: 'SDK:er'
   meta.description: from-team
   services: from-team
-  author: 
+  author: null
   manager: from-team
   layout: LandingPage
-  ms.assetid: 
+  ms.assetid: null
   ms.service: from-team
   ms.tgt_pltfrm: from-team
   ms.devlang: from-team
@@ -22,19 +16,19 @@ metadata:
   ms.date: 09/15/2017
   ms.author: from-team
 abstract:
-  description: 
+  description: null
 sections:
-- title: 
-  items:
-  - type: list
-    style: cards
-    className: cardsA
+  - title: null
     items:
-    - html: <a href="/dotnet/azure/?view=azure-dotnet"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_net.svg" alt=""> <br><b>.NET SDK</b></a> <p>Hämta Azure Libraries för .NET</p>
-    - html: <a href="/java/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_java.svg" alt=""> <br><b>Java SDK</b></a> <p>Hämta Azure Libraries för Java</p>
-    - html: <a href="/javascript/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_nodejs.svg" alt=""> <br><b>Node SDK</b></a> <p>Hämta Azure Libraries för Node</p>
-    - html: <a href="/python/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_python.svg" alt=""> <br><b>Python SDK</b></a> <p>Hämta Azure Libraries för Python</p>
-    - html: <a href="https://rubygems.org/gems/azure"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_ruby.svg" alt=""> <br><b>Ruby SDK</b></a> <p>Hämta Azure Libraries för Ruby</p>
-    - html: <a href="/azure/app-service-web/app-service-web-get-started-php"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_php.svg" alt=""> <br><b>PHP SDK</b></a> <p>Hämta Azure Libraries för PHP</p>
-    - html: <a href="https://azure.microsoft.com/features/xamarin"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_xamarin.svg" alt=""> <br><b>Xamarin</b></a> <p>Lär dig hur de här tjänsterna hjälper dataforskare att utveckla AI-lösningar med Python-verktyg och -bibliotek med en mängd olika tjänster för data och beräkning på Azure.</p>
-    - html: <a href="/go/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_Go-lightblue.svg" alt=""> <br><b>Go SDK</b></a> <p>Hämta Azure-biblioteken för Go</p>
+      - type: list
+        style: cards
+        className: cardsA
+        items:
+          - html: '<a href="/dotnet/azure/?view=azure-dotnet"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_net.svg" alt=""> <br><b>.NET SDK</b></a> <p>Hämta Azure Libraries för .NET</p>'
+          - html: '<a href="/java/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_java.svg" alt=""> <br><b>Java SDK</b></a> <p>Hämta Azure Libraries för Java</p>'
+          - html: '<a href="/javascript/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_nodejs.svg" alt=""> <br><b>Node SDK</b></a> <p>Hämta Azure Libraries för Node</p>'
+          - html: '<a href="/python/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_python.svg" alt=""> <br><b>Python SDK</b></a> <p>Hämta Azure Libraries för Python</p>'
+          - html: '<a href="https://rubygems.org/gems/azure"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_ruby.svg" alt=""> <br><b>Ruby SDK</b></a> <p>Hämta Azure Libraries för Ruby</p>'
+          - html: '<a href="/azure/app-service-web/app-service-web-get-started-php"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_php.svg" alt=""> <br><b>PHP SDK</b></a> <p>Hämta Azure Libraries för PHP</p>'
+          - html: '<a href="https://azure.microsoft.com/features/xamarin"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_xamarin.svg" alt=""> <br><b>Xamarin</b></a> <p>Lär dig hur de här tjänsterna hjälper dataforskare att utveckla AI-lösningar med Python-verktyg och -bibliotek med en mängd olika tjänster för data och beräkning på Azure.</p>'
+          - html: '<a href="/go/azure/"> <img height="48" width="48" src="https://docs.microsoft.com/media/logos/logo_Go-lightblue.svg" alt=""> <br><b>Go SDK</b></a> <p>Hämta Azure-biblioteken för Go</p>'
