--- a/articles/security-center/index.yml
+++ b/articles/security-center/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a014e9e4ea2f6f7eba6564bcb9ffc0ee53e13015
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53542738"
 documentType: LandingData
 title: Dokumentation om Azure Security Center
 metadata:
-  title: Dokumentation om Azure Security Center – Självstudier, API-referens | Microsoft Doc
-  meta.description: Azure Security Center provides unified security management and advanced threat protection across hybrid cloud workloads. Learn how to get started with Security Center, apply security policies across your workloads, limit your exposure to threats, and detect and respond to attacks with our quickstarts and tutorials..
+  title: 'Dokumentation om Azure Security Center – Självstudier, API-referens | Microsoft Doc'
+  meta.description: 'Azure Security Center provides unified security management and advanced threat protection across hybrid cloud workloads. Learn how to get started with Security Center, apply security policies across your workloads, limit your exposure to threats, and detect and respond to attacks with our quickstarts and tutorials..'
   services: security-center
   author: cmcclister
   manager: carolz
@@ -20,75 +14,75 @@ metadata:
   ms.date: 07/26/18
   ms.author: cmcclister
 abstract:
-  description: Azure Security Center erbjuder enhetlig säkerhetshantering och avancerat skydd mot hot i olika hybridmolnarbetsbelastningar. Lär dig att komma igång med Security Center, tillämpa säkerhetsprinciper i arbetsbelastningarna, begränsa hotexponeringen och identifiera och åtgärda attacker med hjälp av våra snabbstarter och självstudier.
+  description: 'Azure Security Center erbjuder enhetlig säkerhetshantering och avancerat skydd mot hot i olika hybridmolnarbetsbelastningar. Lär dig att komma igång med Security Center, tillämpa säkerhetsprinciper i arbetsbelastningarna, begränsa hotexponeringen och identifiera och åtgärda attacker med hjälp av våra snabbstarter och självstudier.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig att integrera virtuella datorer och datorer till Security Center och ansluta dina säkerhetslösningar.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /media/common/i_subscription.svg
-      text: Integrera Azure-prenumerationer
-      href: /azure/security-center/security-center-get-started
-    - image:
-        src: /media/logos/logo_Windows.svg
-      text: Integrera Windows-datorer
-      href: /azure/security-center/quick-onboard-windows-computer
-    - image:
-        src: /media/logos/logo_linux.svg
-      text: Integrera Linux-datorer
-      href: /azure/security-center/quick-onboard-linux-computer
-    - image:
-        src: /media/common/i_multi-connect.svg
-      text: Ansluta säkerhetslösningar
-      href: /azure/security-center/quick-security-solutions
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att definiera säkerhetsprinciper, skydda dina resurser mot skadliga aktiviteter och åtgärda säkerhetsaviseringar och incidenter.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Lär dig att integrera virtuella datorer och datorer till Security Center och ansluta dina säkerhetslösningar.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /media/common/i_subscription.svg
+            text: Integrera Azure-prenumerationer
+            href: /azure/security-center/security-center-get-started
+          - image:
+              src: /media/logos/logo_Windows.svg
+            text: Integrera Windows-datorer
+            href: /azure/security-center/quick-onboard-windows-computer
+          - image:
+              src: /media/logos/logo_linux.svg
+            text: Integrera Linux-datorer
+            href: /azure/security-center/quick-onboard-linux-computer
+          - image:
+              src: /media/common/i_multi-connect.svg
+            text: Ansluta säkerhetslösningar
+            href: /azure/security-center/quick-security-solutions
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/security-center/tutorial-security-policy">Definiera och utvärdera säkerhetsprinciper</a>
-    - html: <a href="/azure/security-center/tutorial-protect-resources">Skydda dina resurser</a>
-    - html: <a href="/azure/security-center/tutorial-security-incident">Reagera på säkerhetsincidenter</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig att definiera säkerhetsprinciper, skydda dina resurser mot skadliga aktiviteter och åtgärda säkerhetsaviseringar och incidenter.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/security-center/tutorial-security-policy">Definiera och utvärdera säkerhetsprinciper</a>
+          - html: <a href="/azure/security-center/tutorial-protect-resources">Skydda dina resurser</a>
+          - html: <a href="/azure/security-center/tutorial-security-incident">Reagera på säkerhetsincidenter</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: "  Introduktion till säkerhet i Azure"
-      href: /learn/modules/intro-to-security-in-azure/
-      image:
-        src: /learn/achievements/intro-to-security-in-azure.svg
-        href: /learn/modules/intro-to-security-in-azure/
-  - type: paragraph
-    text: <a href="/learn/browse/?term=security">Mer interaktiv inlärning...</a>
-- title: Kostnadsfri videoutbildning
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: "\_\_Introduktion till säkerhet i Azure"
+            href: /learn/modules/intro-to-security-in-azure/
+            image:
+              src: /learn/achievements/intro-to-security-in-azure.svg
+              href: /learn/modules/intro-to-security-in-azure/
+      - type: paragraph
+        text: <a href="/learn/browse/?term=security">Mer interaktiv inlärning...</a>
+  - title: Kostnadsfri videoutbildning
     items:
-    - title: Förenkla skyddet av molnresurser med Azure Security Center – Ignite 2018
-      href: https://youtu.be/0txX1Y0GXDc
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_azure.svg
-        href: https://youtu.be/0txX1Y0GXDc
-    - title: Skydda serverarbetsbelastningar med Azure Security Center – Ignite 2018
-      href: https://youtu.be/Kb_xeIJVROo
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_azure.svg
-        href: https://youtu.be/Kb_xeIJVROo
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Förenkla skyddet av molnresurser med Azure Security Center – Ignite 2018
+            href: 'https://youtu.be/0txX1Y0GXDc'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_azure.svg'
+              href: 'https://youtu.be/0txX1Y0GXDc'
+          - title: Skydda serverarbetsbelastningar med Azure Security Center – Ignite 2018
+            href: 'https://youtu.be/Kb_xeIJVROo'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_azure.svg'
+              href: 'https://youtu.be/Kb_xeIJVROo'
+  - title: Referens
     items:
-    - html: <a href="https://docs.microsoft.com/rest/api/securitycenter/">REST API-referens</a>
-    - html: <a href="https://azure.microsoft.com/updates/?product=security-center">Tjänstuppdateringar</a>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - html: '<a href="https://docs.microsoft.com/rest/api/securitycenter/">REST API-referens</a>'
+          - html: '<a href="https://azure.microsoft.com/updates/?product=security-center">Tjänstuppdateringar</a>'
