--- a/articles/service-bus-relay/TOC.yml
+++ b/articles/service-bus-relay/TOC.yml
@@ -1,96 +1,89 @@
-items:
 - name: Dokumentation för Service Bus Relay
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är vidarebefordran?
-    href: relay-what-is-it.md
+    - name: Vad är vidarebefordran?
+      href: relay-what-is-it.md
 - name: Självstudier
   items:
-  - name: Hybridanslutningar
-    items:
-    - name: Skicka och ta emot meddelanden – .NET-webbsockets
-      href: relay-hybrid-connections-dotnet-get-started.md
-    - name: Skicka och ta emot meddelanden – .NET HTTP
-      href: relay-hybrid-connections-http-requests-dotnet-get-started.md
-    - name: Skicka och ta emot meddelanden – Node-webbsockets
-      href: relay-hybrid-connections-node-get-started.md
-    - name: Skicka och ta emot meddelanden – Node HTTP
-      href: relay-hybrid-connections-http-requests-node-get-started.md
-  - name: Windows Communication Foundation (WCF)
-    items:
-    - name: Göra en lokal WCF-tjänst tillgänglig för en webbapp i molnet
-      href: service-bus-dotnet-hybrid-app-using-service-bus-relay.md
-    - name: Göra en lokal WCF-tjänst tillgänglig för en WCF-klient utanför nätverket
-      href: service-bus-relay-tutorial.md
-    - name: Göra en lokal WCF REST-tjänst tillgänglig för en klient utanför nätverket
-      href: service-bus-relay-rest-tutorial.md
+    - name: Hybridanslutningar
+      items:
+        - name: Skicka och ta emot meddelanden – .NET-webbsockets
+          href: relay-hybrid-connections-dotnet-get-started.md
+        - name: Skicka och ta emot meddelanden – .NET HTTP
+          href: relay-hybrid-connections-http-requests-dotnet-get-started.md
+        - name: Skicka och ta emot meddelanden – Node-webbsockets
+          href: relay-hybrid-connections-node-get-started.md
+        - name: Skicka och ta emot meddelanden – Node HTTP
+          href: relay-hybrid-connections-http-requests-node-get-started.md
+    - name: Windows Communication Foundation (WCF)
+      items:
+        - name: Göra en lokal WCF-tjänst tillgänglig för en webbapp i molnet
+          href: service-bus-dotnet-hybrid-app-using-service-bus-relay.md
+        - name: Göra en lokal WCF-tjänst tillgänglig för en WCF-klient utanför nätverket
+          href: service-bus-relay-tutorial.md
+        - name: Göra en lokal WCF REST-tjänst tillgänglig för en klient utanför nätverket
+          href: service-bus-relay-rest-tutorial.md
 - name: Exempel
   items:
-  - name: Hybridanslutningar
-    href: https://github.com/Azure/azure-relay/tree/master/samples/hybrid-connections
-  - name: WCF-relä
-    href: https://github.com/Azure/azure-relay/tree/master/samples/wcf-relay
+    - name: Hybridanslutningar
+      href: 'https://github.com/Azure/azure-relay/tree/master/samples/hybrid-connections'
+    - name: WCF-relä
+      href: 'https://github.com/Azure/azure-relay/tree/master/samples/wcf-relay'
 - name: Begrepp
   items:
-  - name: Autentisering och auktorisering
-    href: relay-authentication-and-authorization.md
-  - name: Hybridanslutningsprotokoll
-    href: relay-hybrid-connections-protocol.md
+    - name: Autentisering och auktorisering
+      href: relay-authentication-and-authorization.md
+    - name: Hybridanslutningsprotokoll
+      href: relay-hybrid-connections-protocol.md
 - name: Gör så här för att
   items:
-  - name: Planera och designa
-    items:
-    - name: Migrera från ACS till SAS
-      href: relay-migrate-acs-sas.md
-  - name: Utveckla
-    items:
-    - name: Skapa ett namnområde
-      href: relay-create-namespace-portal.md
-    - name: Använda WCF Relay för att göra WCF-tjänster tillgängliga för externa klienter
-      href: relay-wcf-dotnet-get-started.md
-    - name: Tillgängliga API:er
-      href: relay-api-overview.md
+    - name: Planera och designa
       items:
-      - name: .NET
-        href: relay-hybrid-connections-dotnet-api-overview.md
-      - name: Node
-        href: relay-hybrid-connections-node-ws-api-overview.md
-  - name: Hantera
-    items:
-    - name: Övervaka Azure Relay med Azure Monitor
-      href: relay-metrics-azure-monitor.md
+        - name: Migrera från ACS till SAS
+          href: relay-migrate-acs-sas.md
+    - name: Utveckla
+      items:
+        - name: Skapa ett namnområde
+          href: relay-create-namespace-portal.md
+        - name: Använda WCF Relay för att göra WCF-tjänster tillgängliga för externa klienter
+          href: relay-wcf-dotnet-get-started.md
+        - name: 'Tillgängliga API:er'
+          href: relay-api-overview.md
+          items:
+            - name: .NET
+              href: relay-hybrid-connections-dotnet-api-overview.md
+            - name: Node
+              href: relay-hybrid-connections-node-ws-api-overview.md
+    - name: Hantera
+      items:
+        - name: Övervaka Azure Relay med Azure Monitor
+          href: relay-metrics-azure-monitor.md
 - name: Referens
   items:
-  - name: .NET
-    items:
-    - name: Microsoft.Azure.Relay
-      href: /dotnet/api/microsoft.azure.relay
-    - name: Microsoft.ServiceBus
-      href: /dotnet/api/Microsoft.ServiceBus
-  - name: Undantag
-    href: relay-exceptions.md
-  - name: Portinställningar
-    href: relay-port-settings.md
+    - name: .NET
+      items:
+        - name: Microsoft.Azure.Relay
+          href: /dotnet/api/microsoft.azure.relay
+        - name: Microsoft.ServiceBus
+          href: /dotnet/api/Microsoft.ServiceBus
+    - name: Undantag
+      href: relay-exceptions.md
+    - name: Portinställningar
+      href: relay-port-settings.md
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=enterprise-integration
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: relay-faq.md
-  - name: Blogg
-    href: https://blogs.msdn.microsoft.com/servicebus/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/service-bus/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Exempel
-    href: https://github.com/azure/azure-relay/tree/master/samples
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-servicebusrelay
-ms.openlocfilehash: c90beee9189b54bf3dddc0773ce024eba0762b05
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57883856"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=enterprise-integration'
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: relay-faq.md
+    - name: Blogg
+      href: 'https://blogs.msdn.microsoft.com/servicebus/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/service-bus/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Exempel
+      href: 'https://github.com/azure/azure-relay/tree/master/samples'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-servicebusrelay'
