--- a/articles/service-bus-relay/index.yml
+++ b/articles/service-bus-relay/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7eba9c526f26254a400eaee1a00644399d3979a8
-ms.sourcegitcommit: b62f138cc477d2bd7e658488aff8e9a5dd24d577
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51612108"
 documentType: LandingData
 title: Dokumentation om Azure Service Bus Relay
 metadata:
   title: Dokumentation om Azure Service Bus Relay
-  meta.description: Learn how the Azure Relay service work in a hybrid cloud and on-premises environment, complete with how to, Tutorials, videos, API references, and more.
+  meta.description: 'Learn how the Azure Relay service work in a hybrid cloud and on-premises environment, complete with how to, Tutorials, videos, API references, and more.'
   services: service-bus-relay
   author: spelluru
   manager: femila
@@ -20,44 +14,44 @@ metadata:
   ms.date: 08/21/2018
   ms.author: spelluru
 abstract:
-  description: Tjänsten Azure Relay hjälper dig att använda hybridprogram mellan en lokal miljö och molnmiljö (i ett företagsnätverk och det offentliga molnet), utan att du behöver öppna en brandväggsanslutning eller göra störande ändringar i företagets nätverksinfrastruktur.
+  description: 'Tjänsten Azure Relay hjälper dig att använda hybridprogram mellan en lokal miljö och molnmiljö (i ett företagsnätverk och det offentliga molnet), utan att du behöver öppna en brandväggsanslutning eller göra störande ändringar i företagets nätverksinfrastruktur.'
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: <b>Hybridanslutningar:</b>
-  - type: list
-    style: ordered
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-dotnet-get-started">Skicka och ta emot meddelanden – .NET-webbsockets</a>
-    - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-http-requests-dotnet-get-started">Skicka och ta emot meddelanden – .NET HTTP</a>
-    - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-node-get-started">Skicka och ta emot meddelanden – Node.js-webbsockets</a>
-    - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-http-requests-node-get-started">Skicka och ta emot meddelanden – Node.js HTTP</a>
-  - type: paragraph
-    text: <b>Windows Communication Foundation (WCF) Relay:</b>
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: '<b>Hybridanslutningar:</b>'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-dotnet-get-started">Skicka och ta emot meddelanden – .NET-webbsockets</a>
+          - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-http-requests-dotnet-get-started">Skicka och ta emot meddelanden – .NET HTTP</a>
+          - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-node-get-started">Skicka och ta emot meddelanden – Node.js-webbsockets</a>
+          - html: <a href="/azure/service-bus-relay/relay-hybrid-connections-http-requests-node-get-started">Skicka och ta emot meddelanden – Node.js HTTP</a>
+      - type: paragraph
+        text: '<b>Windows Communication Foundation (WCF) Relay:</b>'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/service-bus-relay/service-bus-dotnet-hybrid-app-using-service-bus-relay">Göra en lokal WCF-tjänst tillgänglig för en webbapp i molnet</a>
+          - html: <a href="/azure/service-bus-relay/service-bus-relay-tutorial">Göra en lokal WCF-tjänst tillgänglig för en WCF-klient utanför nätverket</a>
+          - html: <a href="/azure/service-bus-relay/service-bus-relay-rest-tutorial">Göra en lokal WCF-tjänst tillgänglig för ett program utanför nätverket</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/service-bus-relay/service-bus-dotnet-hybrid-app-using-service-bus-relay">Göra en lokal WCF-tjänst tillgänglig för en webbapp i molnet</a>
-    - html: <a href="/azure/service-bus-relay/service-bus-relay-tutorial">Göra en lokal WCF-tjänst tillgänglig för en WCF-klient utanför nätverket</a>
-    - html: <a href="/azure/service-bus-relay/service-bus-relay-rest-tutorial">Göra en lokal WCF-tjänst tillgänglig för ett program utanför nätverket</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Exempel på GitHub
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Exempel på GitHub
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/Azure/azure-relay/tree/master/samples/hybrid-connections">Hybridanslutningar</a>'
+          - html: '<a href="https://github.com/Azure/azure-relay/tree/master/samples/wcf-relay">Windows Communication Foundation (WCF)</a>'
+  - title: Referens
     items:
-    - html: <a href="https://github.com/Azure/azure-relay/tree/master/samples/hybrid-connections">Hybridanslutningar</a>
-    - html: <a href="https://github.com/Azure/azure-relay/tree/master/samples/wcf-relay">Windows Communication Foundation (WCF)</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.relay?view=azure-dotnet">.NET Framework</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/servicebus/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Språk
+            html: <p><a href="/dotnet/api/microsoft.azure.relay?view=azure-dotnet">.NET Framework</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/servicebus/">REST API-referens</a></p>
