--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -1,97 +1,90 @@
-items:
 - name: Azure Storage-dokumentation
   href: /azure/storage/
 - name: Översikt
-  items:
-  - name: Översikt över Azure Table Storage
-    href: table-storage-overview.md
-  - name: Välj tabellagring eller tabell-API
-    href: /azure/cosmos-db/table-support
-    maintainContext: true
   expanded: true
+  items:
+    - name: Översikt över Azure Table Storage
+      href: table-storage-overview.md
+    - name: Välj tabellagring eller tabell-API
+      href: /azure/cosmos-db/table-support
+      maintainContext: true
 - name: Snabbstarter
   items:
-  - name: skapar ett lagringskonto
-    displayName: resource manager, resource manager template, template, ARM
-    href: /azure/storage/common/storage-quickstart-create-account
-    maintainContext: true
-  - name: Skapa en tabell i Azure Portal
-    href: table-storage-quickstart-portal.md
+    - name: skapar ett lagringskonto
+      displayName: 'resource manager, resource manager template, template, ARM'
+      href: /azure/storage/common/storage-quickstart-create-account
+      maintainContext: true
+    - name: Skapa en tabell i Azure Portal
+      href: table-storage-quickstart-portal.md
 - name: Exempel
   items:
-  - name: .NET
-    href: /azure/cosmos-db/table-storage-how-to-use-dotnet
-    maintainContext: true
-  - name: F#
-    href: https://docs.microsoft.com/dotnet/articles/fsharp/using-fsharp-on-azure/table-storage
-    maintainContext: true
-  - name: Java
-    href: /azure/cosmos-db/table-storage-how-to-use-java
-    maintainContext: true
-  - name: Node.js
-    href: /azure/cosmos-db/table-storage-how-to-use-nodejs
-    maintainContext: true
-  - name: C++
-    href: /azure/cosmos-db/table-storage-how-to-use-c-plus
-    maintainContext: true
-  - name: PHP
-    href: /azure/cosmos-db/table-storage-how-to-use-php
-    maintainContext: true
-  - name: Python
-    href: /azure/cosmos-db/table-storage-how-to-use-python
-    maintainContext: true
-  - name: Ruby
-    href: /azure/cosmos-db/table-storage-how-to-use-ruby
-    maintainContext: true
-  - name: PowerShell
-    href: /azure/storage/tables/table-storage-how-to-use-powershell
-    maintainContext: true
+    - name: .NET
+      href: /azure/cosmos-db/table-storage-how-to-use-dotnet
+      maintainContext: true
+    - name: 'F#'
+      href: 'https://docs.microsoft.com/dotnet/articles/fsharp/using-fsharp-on-azure/table-storage'
+      maintainContext: true
+    - name: Java
+      href: /azure/cosmos-db/table-storage-how-to-use-java
+      maintainContext: true
+    - name: Node.js
+      href: /azure/cosmos-db/table-storage-how-to-use-nodejs
+      maintainContext: true
+    - name: C++
+      href: /azure/cosmos-db/table-storage-how-to-use-c-plus
+      maintainContext: true
+    - name: PHP
+      href: /azure/cosmos-db/table-storage-how-to-use-php
+      maintainContext: true
+    - name: Python
+      href: /azure/cosmos-db/table-storage-how-to-use-python
+      maintainContext: true
+    - name: Ruby
+      href: /azure/cosmos-db/table-storage-how-to-use-ruby
+      maintainContext: true
+    - name: PowerShell
+      href: /azure/storage/tables/table-storage-how-to-use-powershell
+      maintainContext: true
 - name: Begrepp
   items:
-  - name: Lagringskonton
-    href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    items:
-    - name: Hantera ett lagringskonto
-      href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: Uppgradera ett lagringskonto
-      href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-  - name: Utforma skalbara och högpresterande tabeller
-    href: table-storage-design.md
-  - name: Riktlinjer för tabelldesign
-    href: table-storage-design-guidelines.md
-  - name: Utforma för frågor
-    href: table-storage-design-for-query.md
-  - name: Utforma för dataändring
-    href: table-storage-design-for-modification.md
-  - name: Kryptera tabelldata
-    href: table-storage-design-encrypt-data.md
-  - name: Modellera relationer
-    href: table-storage-design-modeling.md
-  - name: Mönster för tabelldesign
-    href: table-storage-design-patterns.md
+    - name: Lagringskonton
+      href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+      items:
+        - name: Hantera ett lagringskonto
+          href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: Uppgradera ett lagringskonto
+          href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+    - name: Utforma skalbara och högpresterande tabeller
+      href: table-storage-design.md
+    - name: Riktlinjer för tabelldesign
+      href: table-storage-design-guidelines.md
+    - name: Utforma för frågor
+      href: table-storage-design-for-query.md
+    - name: Utforma för dataändring
+      href: table-storage-design-for-modification.md
+    - name: Kryptera tabelldata
+      href: table-storage-design-encrypt-data.md
+    - name: Modellera relationer
+      href: table-storage-design-modeling.md
+    - name: Mönster för tabelldesign
+      href: table-storage-design-patterns.md
 - name: Instruktionsguider
   items:
-  - name: Så här använder du lagringsemulatorn
-    href: /azure/storage/common/storage-use-emulator
-    maintainContext: true
-  - name: Överföra data
-    items:
-    - name: AzCopy (v10)
-      href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: AzCopy i Windows (v8)
-      href: ../common/storage-use-azcopy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: AzCopy i Linux (v8)
-      href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-  - name: Initiera en kontoredundans
-    href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+    - name: Så här använder du lagringsemulatorn
+      href: /azure/storage/common/storage-use-emulator
+      maintainContext: true
+    - name: Överföra data
+      items:
+        - name: AzCopy (v10)
+          href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: AzCopy i Windows (v8)
+          href: ../common/storage-use-azcopy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: AzCopy i Linux (v8)
+          href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+    - name: Initiera en kontoredundans
+      href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
 - name: Resurser
   items:
-  - name: REST-API:er för tabellagring
-    href: https://docs.microsoft.com/rest/api/storageservices/table-service-rest-api
-    maintainContext: true
-ms.openlocfilehash: de554dc0e15e351eb7ba5b36e38fc32f01b700b6
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "57894112"
+    - name: 'REST-API:er för tabellagring'
+      href: 'https://docs.microsoft.com/rest/api/storageservices/table-service-rest-api'
+      maintainContext: true
