--- a/articles/virtual-machines/linux/index.yml
+++ b/articles/virtual-machines/linux/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cfe8611def427577cb000efe0e7c0568193aa4f8
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46993450"
 documentType: LandingData
 title: Virtuella Linux-datorer
 metadata:
   document_id: 44409b3f-ab8c-053d-cdf4-5d7e823a275f
-  title: Dokumentation om virtuella Linux-datorer i Azure - självstudier, API-referens
+  title: 'Dokumentation om virtuella Linux-datorer i Azure - självstudier, API-referens'
   meta.description: Learn how to create a virtual machine using the Linux distribution of your choice. Documentation shows different ways to create VM templates.
   services: virtual-machines\linux
   author: czeumault
@@ -21,107 +15,107 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Virtuella Linux-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Red Hat, Ubuntu eller valfri annan Linux-distribution. Lär dig hur du skapar, konfigurerar, hanterar, uppdaterar och skalar virtuella Linux-datorer med våra snabbstarter, självstudier och exempel.
+  description: 'Virtuella Linux-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Red Hat, Ubuntu eller valfri annan Linux-distribution. Lär dig hur du skapar, konfigurerar, hanterar, uppdaterar och skalar virtuella Linux-datorer med våra snabbstarter, självstudier och exempel.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
-      src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/create-linux-virtual-machine.png
+      src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/create-linux-virtual-machine.png'
       width: 250
-    title: Skapa en virtuell Linux-dator. (4:11)
-    href: https://azure.microsoft.com/resources/videos/create-linux-virtual-machine/
+    title: 'Skapa en virtuell Linux-dator. (4:11)'
+    href: 'https://azure.microsoft.com/resources/videos/create-linux-virtual-machine/'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar en NGINX-webbserver i en virtuell dator som kör Ubuntu:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure CLI
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-cli?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-portal?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera, hantera och skala virtuella Linux-datorer på Azure.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar en NGINX-webbserver i en virtuell dator som kör Ubuntu:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg'
+            text: Azure CLI
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-cli?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-portal?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/virtual-machines/linux/tutorial-manage-vm">Skapa och hantera virtuella Linux-datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-manage-disks">Skapa och hantera virtuella datordiskar</a></li>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-virtual-network">Hantera virtuella datorer och virtuella nätverk</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-govern-resources">Styra virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-monitoring">Övervaka och uppdatera virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">Skapa en CI/CD-infrastruktur med Jenkins, Docker och GitHub</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-build-deploy-jenkins">CI/CD med Azure Pipelines</a>
-    - html: Skapa en webbserverstack med <a href="/azure/virtual-machines/linux/tutorial-lamp-stack">LAMP</a>, <a href="/azure/virtual-machines/linux/tutorial-lemp-stack">LEMP</a> eller <a href="/azure/virtual-machines/linux/tutorial-mean-stack">MEAN</a>
-    - html: <a href="/azure/virtual-machines/linux/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och skala virtuella Linux-datorer på Azure.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/virtual-machines/linux/tutorial-manage-vm">Skapa och hantera virtuella Linux-datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-manage-disks">Skapa och hantera virtuella datordiskar</a></li>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-virtual-network">Hantera virtuella datorer och virtuella nätverk</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-govern-resources">Styra virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-monitoring">Övervaka och uppdatera virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/linux/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
+          - html: '<a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">Skapa en CI/CD-infrastruktur med Jenkins, Docker och GitHub</a>'
+          - html: <a href="/azure/virtual-machines/linux/tutorial-build-deploy-jenkins">CI/CD med Azure Pipelines</a>
+          - html: 'Skapa en webbserverstack med <a href="/azure/virtual-machines/linux/tutorial-lamp-stack">LAMP</a>, <a href="/azure/virtual-machines/linux/tutorial-lemp-stack">LEMP</a> eller <a href="/azure/virtual-machines/linux/tutorial-mean-stack">MEAN</a>'
+          - html: <a href="/azure/virtual-machines/linux/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: " Skapa en virtuell Linux-dator i Azure"
-      href: /learn/modules/create-linux-virtual-machine-in-azure/
-      image:
-        src: /learn/achievements/create-linux-virtual-machine-in-azure.svg
-        href: /learn/modules/create-linux-virtual-machine-in-azure/
-    - title: Skapa och köra en webbapp med MEAN-stacken på en virtuell Linux-dator i Azure
-      href: /learn/modules/build-a-web-app-with-mean-on-a-linux-vm/
-      image:
-        src: /learn/achievements/build-a-web-app-with-mean-on-a-linux-vm.svg
-        href: /learn/modules/build-a-web-app-with-mean-on-a-linux-vm/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-virtual-machines">Mer interaktiv inlärning...</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: "\_Skapa en virtuell Linux-dator i Azure"
+            href: /learn/modules/create-linux-virtual-machine-in-azure/
+            image:
+              src: /learn/achievements/create-linux-virtual-machine-in-azure.svg
+              href: /learn/modules/create-linux-virtual-machine-in-azure/
+          - title: Skapa och köra en webbapp med MEAN-stacken på en virtuell Linux-dator i Azure
+            href: /learn/modules/build-a-web-app-with-mean-on-a-linux-vm/
+            image:
+              src: /learn/achievements/build-a-web-app-with-mean-on-a-linux-vm.svg
+              href: /learn/modules/build-a-web-app-with-mean-on-a-linux-vm/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-virtual-machines">Mer interaktiv inlärning...</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Distribuera din första app till Azure.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+  - title: Exempel
     items:
-    - html: <a href="/azure/virtual-machines/virtual-machines-linux-cli-samples">Azure CLI</a>
-    - html: <a href="/azure/virtual-machines/virtual-machines-linux-powershell-samples">Azure PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Distribuera din första app till Azure.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/virtual-machines/virtual-machines-linux-cli-samples">Azure CLI</a>
+          - html: <a href="/azure/virtual-machines/virtual-machines-linux-powershell-samples">Azure PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/vm">Azure CLI</a></p><p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/compute">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/vm">Azure CLI</a></p><p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.compute">NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/compute">REST API-referens</a></p>
