--- a/articles/virtual-wan/index.yml
+++ b/articles/virtual-wan/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7ec8d7df1ab9480fd0b0cd98182b5fb49e957d9e
-ms.sourcegitcommit: 94305d8ee91f217ec98039fde2ac4326761fea22
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57407365"
 documentType: LandingData
 title: Azure Virtual WAN
 metadata:
-  document_id: 
-  title: Dokumentation om Virtual WAN – Självstudier, API-referenser | Microsoft Docs
-  meta.description: Learn how to configure, create, and manage an Azure Virtual WAN. Build secure global scale branch connectivity.
+  document_id: null
+  title: 'Dokumentation om Virtual WAN – Självstudier, API-referenser | Microsoft Docs'
+  meta.description: 'Learn how to configure, create, and manage an Azure Virtual WAN. Build secure global scale branch connectivity.'
   services: virtual-wan
   author: cherylmc
   manager: jeconnoc
@@ -21,26 +15,26 @@ metadata:
   ms.date: 10/01/2018
   ms.author: cherylmc
 abstract:
-  description: Lär dig hur du konfigurerar, skapar och hanterar Azure Virtual WAN. Kompilera säker global skalförgreningsanslutning.
+  description: 'Lär dig hur du konfigurerar, skapar och hanterar Azure Virtual WAN. Kompilera säker global skalförgreningsanslutning.'
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du konfigurerar, skapar och hanterar anslutningar med hjälp av Azure Virtual WAN.
-  - type: list
-    style: unordered
-    className: spaced Bullet
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/virtual-wan/virtual-wan-site-to-site-portal">Plats-till-plats-anslutningar</a>
-    - html: <a href="/azure/virtual-wan/virtual-wan-point-to-site-portal">Punkt-till-plats-anslutningar</a>
-    - html: <a href="/azure/virtual-wan/virtual-wan-expressroute-portal">ExpressRoute-anslutningar</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Lär dig hur du konfigurerar, skapar och hanterar anslutningar med hjälp av Azure Virtual WAN.'
+      - type: list
+        style: unordered
+        className: spaced Bullet
+        items:
+          - html: <a href="/azure/virtual-wan/virtual-wan-site-to-site-portal">Plats-till-plats-anslutningar</a>
+          - html: <a href="/azure/virtual-wan/virtual-wan-point-to-site-portal">Punkt-till-plats-anslutningar</a>
+          - html: <a href="/azure/virtual-wan/virtual-wan-expressroute-portal">ExpressRoute-anslutningar</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/az.network#networking">PowerShell</a></p><p><a href="/cli/azure/ext/virtual-wan">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="https://go.microsoft.com/fwlink/p/?linkid=2005000">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/powershell/module/az.network#networking">PowerShell</a></p><p><a href="/cli/azure/ext/virtual-wan">Azure CLI</a></p>'
+          - title: REST
+            html: '<p><a href="https://go.microsoft.com/fwlink/p/?linkid=2005000">REST API-referens</a></p>'
